feat: update translations via @LingoDotDev

--- a/apps/web/public/static/locales/ar/common.json
+++ b/apps/web/public/static/locales/ar/common.json
@@ -871,6 +871,10 @@
   "create_team": "إنشاء فريق",
   "name": "الاسم",
   "nameless_team": "فريق بدون اسم",
+  "oauth_clients": "عملاء OAuth",
+  "oauth_clients_description": "إدارة عملاء OAuth لمؤسستك",
+  "create_oauth_client": "إنشاء عميل OAuth",
+  "create_oauth_client_description": "إنشاء عميل OAuth جديد للتكاملات مع الأطراف الثالثة",
   "oauth_client_deletion_message": "تم حذف عميل OAuth بنجاح",
   "create_new_team_description": "قم بإنشاء فريق جديد للتعاون مع المستخدمين.",
   "create_new_team": "إنشاء فريق جديد",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "تعديل نوع الحدث",
   "only_admin_can_see_members_of_org": "هذه المنظمة خاصة، ولا يمكن إلا لمسؤول المنظمة أو مالكها رؤية أعضائها.",
   "only_admin_can_manage_sso_org": "فقط مسؤول المنظمة أو مالكها يمكنه إدارة إعدادات SSO",
+  "only_admin_can_manage_directory_sync": "فقط مسؤول المؤسسة أو مالكها يمكنه إدارة إعدادات مزامنة الدليل",
+  "only_admin_can_manage_oauth_clients": "فقط مسؤول المؤسسة أو مالكها يمكنه إدارة عملاء OAuth",
   "collective_scheduling": "جدولة جماعية",
   "make_it_easy_to_book": "اجعل من السهل حجز فريقك عندما يكون الجميع متاحاً.",
   "find_the_best_person": "ابحث عن أفضل شخص متاح وابحث بالترتيب بين أعضاء فريقك.",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "خطأ في إنشاء الدور",
   "error_updating_role": "خطأ في تحديث الدور",
   "pbac_desc_create_roles": "إنشاء الأدوار",
+  "pbac_resource_attributes": "السمات",
+  "pbac_desc_view_organization_attributes": "عرض سمات المؤسسة",
+  "pbac_desc_update_organization_attributes": "تحديث سمات المؤسسة",
+  "pbac_desc_delete_organization_attributes": "حذف سمات المؤسسة",
+  "pbac_desc_create_organization_attributes": "إنشاء سمات المؤسسة",
   "pbac_desc_view_roles": "عرض الأدوار",
   "pbac_desc_update_roles": "تحديث الأدوار",
   "pbac_desc_delete_roles": "حذف الأدوار",
-  "pbac_desc_manage_roles": "جميع الإجراءات على الأدوار",
+  "pbac_desc_manage_roles": "جميع الإجراءات على الأدوار عبر فرق المؤسسة",
   "pbac_desc_create_event_types": "إنشاء أنواع الأحداث",
   "pbac_desc_view_event_types": "عرض أنواع الأحداث",
   "pbac_desc_update_event_types": "تحديث أنواع الأحداث",
   "pbac_desc_delete_event_types": "حذف أنواع الأحداث",
-  "pbac_desc_manage_event_types": "جميع الإجراءات على أنواع الأحداث",
+  "pbac_desc_manage_event_types": "جميع الإجراءات على أنواع الأحداث عبر فرق المؤسسة",
   "pbac_desc_create_teams": "إنشاء الفرق",
   "pbac_desc_view_team_details": "عرض تفاصيل الفريق",
   "pbac_desc_update_team_settings": "تحديث إعدادات الفريق",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "دعوة أعضاء الفريق",
   "pbac_desc_remove_team_members": "إزالة أعضاء الفريق",
   "pbac_desc_change_team_member_role": "تغيير دور أعضاء الفريق",
-  "pbac_desc_manage_teams": "جميع الإجراءات على الفرق",
+  "pbac_desc_manage_teams": "جميع الإجراءات على الفرق عبر فرق المؤسسة",
   "pbac_desc_create_organization": "إنشاء مؤسسة",
   "pbac_desc_view_organization_details": "عرض تفاصيل المؤسسة",
   "pbac_desc_list_organization_members": "سرد أعضاء المؤسسة",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "عرض حجوزات المؤسسة",
   "pbac_desc_view_booking_recordings": "عرض تسجيلات الحجز",
   "pbac_desc_update_bookings": "تحديث الحجوزات",
-  "pbac_desc_manage_bookings": "جميع الإجراءات على الحجوزات",
+  "pbac_desc_manage_bookings": "جميع الإجراءات على الحجوزات عبر فرق المؤسسة",
   "pbac_desc_view_team_insights": "عرض رؤى الفريق",
   "pbac_desc_manage_team_insights": "إدارة رؤى الفريق",
   "read_permission_auto_enabled_tooltip": "يتم تمكين إذن القراءة تلقائيًا عند إنشاء أو تحديث أو حذف مورد",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "يمكن استخدام هذا الرابط لـ {{count}} حجز",
   "usage_based_generic_expiration_description": "يمكن تكوين هذا الرابط لتنتهي صلاحيته بعد عدد محدد من الحجوزات",
   "usage_based_expiration_description_plural": "يمكن استخدام هذا الرابط لـ {{count}} حجوزات",
+  "booking_status": "حالة الحجز",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ أضف السلاسل الجديدة أعلاه هنا ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
