--- a/apps/web/public/static/locales/az/common.json
+++ b/apps/web/public/static/locales/az/common.json
@@ -871,6 +871,10 @@
   "create_team": "Komanda Yarat",
   "name": "Ad",
   "nameless_team": "Adsız Komanda",
+  "oauth_clients": "OAuth Müştəriləri",
+  "oauth_clients_description": "Təşkilatınız üçün OAuth müştərilərini idarə edin",
+  "create_oauth_client": "OAuth Müştərisi Yaradın",
+  "create_oauth_client_description": "Üçüncü tərəf inteqrasiyaları üçün yeni OAuth müştərisi yaradın",
   "oauth_client_deletion_message": "OAuth müştəri uğurla silindi",
   "create_new_team_description": "İstifadəçilərlə əməkdaşlıq etmək üçün yeni komanda yaradın.",
   "create_new_team": "Yeni komanda yaradın",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "Tədbir növünü redaktə et",
   "only_admin_can_see_members_of_org": "Bu Təşkilat özəldir və yalnız təşkilatın admini və ya sahibi üzvlərini görə bilər.",
   "only_admin_can_manage_sso_org": "Yalnız təşkilatın admini və ya sahibi SSO parametrlərini idarə edə bilər",
+  "only_admin_can_manage_directory_sync": "Yalnız təşkilatın administratoru və ya sahibi kataloq sinxronizasiya parametrlərini idarə edə bilər",
+  "only_admin_can_manage_oauth_clients": "Yalnız təşkilatın administratoru və ya sahibi OAuth müştərilərini idarə edə bilər",
   "collective_scheduling": "Kollektiv Planlaşdırma",
   "make_it_easy_to_book": "Komandanızın hər kəsin mövcud olduğu vaxtı asanlıqla sifariş edin.",
   "find_the_best_person": "Mövcud olan ən yaxşı şəxsi tapın və komandanız arasında dövr edin.",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "Rol yaradılarkən xəta baş verdi",
   "error_updating_role": "Rol yenilənərkən xəta baş verdi",
   "pbac_desc_create_roles": "Rollar yaratmaq",
+  "pbac_resource_attributes": "Atributlar",
+  "pbac_desc_view_organization_attributes": "Təşkilat atributlarını görmək",
+  "pbac_desc_update_organization_attributes": "Təşkilat atributlarını yeniləmək",
+  "pbac_desc_delete_organization_attributes": "Təşkilat atributlarını silmək",
+  "pbac_desc_create_organization_attributes": "Təşkilat atributları yaratmaq",
   "pbac_desc_view_roles": "Rollara baxmaq",
   "pbac_desc_update_roles": "Rolları yeniləmək",
   "pbac_desc_delete_roles": "Rolları silmək",
-  "pbac_desc_manage_roles": "Rollar üzərində bütün əməliyyatlar",
+  "pbac_desc_manage_roles": "Təşkilat komandaları üzrə rollar üzərində bütün əməliyyatlar",
   "pbac_desc_create_event_types": "Tədbir növləri yaratmaq",
   "pbac_desc_view_event_types": "Tədbir növlərinə baxmaq",
   "pbac_desc_update_event_types": "Tədbir növlərini yeniləmək",
   "pbac_desc_delete_event_types": "Tədbir növlərini silmək",
-  "pbac_desc_manage_event_types": "Tədbir növləri üzərində bütün əməliyyatlar",
+  "pbac_desc_manage_event_types": "Təşkilat komandaları üzrə tədbir növləri üzərində bütün əməliyyatlar",
   "pbac_desc_create_teams": "Komandalar yaratmaq",
   "pbac_desc_view_team_details": "Komanda məlumatlarına baxmaq",
   "pbac_desc_update_team_settings": "Komanda parametrlərini yeniləmək",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "Komanda üzvlərini dəvət etmək",
   "pbac_desc_remove_team_members": "Komanda üzvlərini silmək",
   "pbac_desc_change_team_member_role": "Komanda üzvlərinin rolunu dəyişmək",
-  "pbac_desc_manage_teams": "Komandalar üzərində bütün əməliyyatlar",
+  "pbac_desc_manage_teams": "Təşkilat komandaları üzrə komandalar üzərində bütün əməliyyatlar",
   "pbac_desc_create_organization": "Təşkilat yaratmaq",
   "pbac_desc_view_organization_details": "Təşkilat məlumatlarına baxmaq",
   "pbac_desc_list_organization_members": "Təşkilat üzvlərinin siyahısı",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "Təşkilat rezervasiyalarına baxmaq",
   "pbac_desc_view_booking_recordings": "Rezervasiya qeydlərinə baxmaq",
   "pbac_desc_update_bookings": "Rezervasiyaları yeniləmək",
-  "pbac_desc_manage_bookings": "Rezervasiyalar üzərində bütün əməliyyatlar",
+  "pbac_desc_manage_bookings": "Təşkilat komandaları üzrə rezervasiyalar üzərində bütün əməliyyatlar",
   "pbac_desc_view_team_insights": "Komanda analitikasına baxmaq",
   "pbac_desc_manage_team_insights": "Komanda analitikasını idarə etmək",
   "read_permission_auto_enabled_tooltip": "Resurs yaradarkən, yeniləyərkən və ya silənərkən oxuma icazəsi avtomatik olaraq aktivləşdirilir",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "Bu link {{count}} rezervasiya üçün istifadə edilə bilər",
   "usage_based_generic_expiration_description": "Bu link müəyyən sayda rezervasiyadan sonra bitəcək şəkildə konfiqurasiya edilə bilər",
   "usage_based_expiration_description_plural": "Bu link {{count}} rezervasiya üçün istifadə edilə bilər",
+  "booking_status": "Rezervasiya statusu",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Yeni sətirləri bura əlavə edin ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
