--- a/apps/web/public/static/locales/bg/common.json
+++ b/apps/web/public/static/locales/bg/common.json
@@ -871,6 +871,10 @@
   "create_team": "Създай екип",
   "name": "Име",
   "nameless_team": "Безименен екип",
+  "oauth_clients": "OAuth клиенти",
+  "oauth_clients_description": "Управлявайте OAuth клиенти за вашата организация",
+  "create_oauth_client": "Създаване на OAuth клиент",
+  "create_oauth_client_description": "Създайте нов OAuth клиент за интеграции с трети страни",
   "oauth_client_deletion_message": "OAuth клиентът е изтрит успешно",
   "create_new_team_description": "Създай нов екип за съвместна работа с потребители.",
   "create_new_team": "Създай нов екип",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "Редактиране на тип събитие",
   "only_admin_can_see_members_of_org": "Тази организация е частна и само администраторът или собственикът на организацията може да вижда нейните членове.",
   "only_admin_can_manage_sso_org": "Само администраторът или собственикът на организацията може да управлява SSO настройките",
+  "only_admin_can_manage_directory_sync": "Само администраторът или собственикът на организацията може да управлява настройките за синхронизация на директорията",
+  "only_admin_can_manage_oauth_clients": "Само администраторът или собственикът на организацията може да управлява OAuth клиенти",
   "collective_scheduling": "Колективно планиране",
   "make_it_easy_to_book": "Улеснете резервирането на вашия екип, когато всички са свободни.",
   "find_the_best_person": "Намерете най-подходящия свободен човек и редувайте през екипа си.",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "Грешка при създаване на роля",
   "error_updating_role": "Грешка при актуализиране на роля",
   "pbac_desc_create_roles": "Създаване на роли",
+  "pbac_resource_attributes": "Атрибути",
+  "pbac_desc_view_organization_attributes": "Преглед на атрибутите на организацията",
+  "pbac_desc_update_organization_attributes": "Актуализиране на атрибутите на организацията",
+  "pbac_desc_delete_organization_attributes": "Изтриване на атрибутите на организацията",
+  "pbac_desc_create_organization_attributes": "Създаване на атрибути на организацията",
   "pbac_desc_view_roles": "Преглед на роли",
   "pbac_desc_update_roles": "Актуализиране на роли",
   "pbac_desc_delete_roles": "Изтриване на роли",
-  "pbac_desc_manage_roles": "Всички действия върху роли",
+  "pbac_desc_manage_roles": "Всички действия върху роли в екипите на организацията",
   "pbac_desc_create_event_types": "Създаване на типове събития",
   "pbac_desc_view_event_types": "Преглед на типове събития",
   "pbac_desc_update_event_types": "Актуализиране на типове събития",
   "pbac_desc_delete_event_types": "Изтриване на типове събития",
-  "pbac_desc_manage_event_types": "Всички действия върху типове събития",
+  "pbac_desc_manage_event_types": "Всички действия върху типове събития в екипите на организацията",
   "pbac_desc_create_teams": "Създаване на екипи",
   "pbac_desc_view_team_details": "Преглед на детайли за екипа",
   "pbac_desc_update_team_settings": "Актуализиране на настройки на екипа",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "Поканване на членове на екипа",
   "pbac_desc_remove_team_members": "Премахване на членове на екипа",
   "pbac_desc_change_team_member_role": "Промяна на ролята на членове на екипа",
-  "pbac_desc_manage_teams": "Всички действия върху екипи",
+  "pbac_desc_manage_teams": "Всички действия върху екипи в организацията",
   "pbac_desc_create_organization": "Създаване на организация",
   "pbac_desc_view_organization_details": "Преглед на детайли за организацията",
   "pbac_desc_list_organization_members": "Списък на членовете на организацията",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "Преглед на резервации на организацията",
   "pbac_desc_view_booking_recordings": "Преглед на записи от резервации",
   "pbac_desc_update_bookings": "Актуализиране на резервации",
-  "pbac_desc_manage_bookings": "Всички действия върху резервации",
+  "pbac_desc_manage_bookings": "Всички действия върху резервации в екипите на организацията",
   "pbac_desc_view_team_insights": "Преглед на анализи на екипа",
   "pbac_desc_manage_team_insights": "Управление на анализи на екипа",
   "read_permission_auto_enabled_tooltip": "Разрешението за четене се активира автоматично при създаване, актуализиране или изтриване на ресурс",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "Тази връзка може да се използва за {{count}} резервация",
   "usage_based_generic_expiration_description": "Тази връзка може да бъде конфигурирана да изтече след определен брой резервации",
   "usage_based_expiration_description_plural": "Тази връзка може да се използва за {{count}} резервации",
+  "booking_status": "Статус на резервацията",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Добавете новите си низове над този ред ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
