--- a/apps/web/public/static/locales/bn/common.json
+++ b/apps/web/public/static/locales/bn/common.json
@@ -871,6 +871,10 @@
   "create_team": "দল তৈরি করুন",
   "name": "নাম",
   "nameless_team": "নামবিহীন টিম",
+  "oauth_clients": "OAuth ক্লায়েন্ট",
+  "oauth_clients_description": "আপনার সংগঠনের জন্য OAuth ক্লায়েন্ট পরিচালনা করুন",
+  "create_oauth_client": "OAuth ক্লায়েন্ট তৈরি করুন",
+  "create_oauth_client_description": "তৃতীয়-পক্ষের ইন্টিগ্রেশনের জন্য একটি নতুন OAuth ক্লায়েন্ট তৈরি করুন",
   "oauth_client_deletion_message": "OAuth ক্লায়েন্ট সফলভাবে মুছে ফেলা হয়েছে",
   "create_new_team_description": "ব্যবহারকারীদের সাথে সহযোগিতা করার জন্য একটি নতুন দল তৈরি করুন।",
   "create_new_team": "একটি নতুন দল তৈরি করুন",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "ইভেন্ট প্রকার সম্পাদনা করুন",
   "only_admin_can_see_members_of_org": "এই সংস্থাটি ব্যক্তিগত, এবং কেবলমাত্র সংস্থার প্রশাসক বা মালিক তার সদস্যদের দেখতে পারেন।",
   "only_admin_can_manage_sso_org": "কেবলমাত্র সংস্থার প্রশাসক বা মালিক এসএসও সেটিংস পরিচালনা করতে পারেন",
+  "only_admin_can_manage_directory_sync": "শুধুমাত্র সংগঠনের অ্যাডমিন বা মালিক ডিরেক্টরি সিঙ্ক সেটিংস পরিচালনা করতে পারেন",
+  "only_admin_can_manage_oauth_clients": "শুধুমাত্র সংগঠনের অ্যাডমিন বা মালিক OAuth ক্লায়েন্ট পরিচালনা করতে পারেন",
   "collective_scheduling": "সম্মিলিত সময়সূচী",
   "make_it_easy_to_book": "প্রত্যেকে যখন উপলব্ধ থাকে তখন আপনার দল বুক করা সহজ করুন।",
   "find_the_best_person": "আপনার দলের মাধ্যমে উপলব্ধ সেরা ব্যক্তি এবং চক্রটি সন্ধান করুন।",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "ভূমিকা তৈরি করতে ত্রুটি",
   "error_updating_role": "ভূমিকা আপডেট করতে ত্রুটি",
   "pbac_desc_create_roles": "ভূমিকা তৈরি করুন",
+  "pbac_resource_attributes": "বৈশিষ্ট্য",
+  "pbac_desc_view_organization_attributes": "সংগঠনের বৈশিষ্ট্য দেখুন",
+  "pbac_desc_update_organization_attributes": "সংগঠনের বৈশিষ্ট্য আপডেট করুন",
+  "pbac_desc_delete_organization_attributes": "সংগঠনের বৈশিষ্ট্য মুছুন",
+  "pbac_desc_create_organization_attributes": "সংগঠনের বৈশিষ্ট্য তৈরি করুন",
   "pbac_desc_view_roles": "ভূমিকা দেখুন",
   "pbac_desc_update_roles": "ভূমিকা আপডেট করুন",
   "pbac_desc_delete_roles": "ভূমিকা মুছুন",
-  "pbac_desc_manage_roles": "ভূমিকার উপর সমস্ত কার্যক্রম",
+  "pbac_desc_manage_roles": "সংগঠনের টিমগুলি জুড়ে ভূমিকাগুলিতে সমস্ত কার্যক্রম",
   "pbac_desc_create_event_types": "ইভেন্টের ধরণ তৈরি করুন",
   "pbac_desc_view_event_types": "ইভেন্টের ধরণ দেখুন",
   "pbac_desc_update_event_types": "ইভেন্টের ধরণ আপডেট করুন",
   "pbac_desc_delete_event_types": "ইভেন্টের ধরণ মুছুন",
-  "pbac_desc_manage_event_types": "ইভেন্টের ধরণের উপর সমস্ত কার্যক্রম",
+  "pbac_desc_manage_event_types": "সংগঠনের টিমগুলি জুড়ে ইভেন্ট টাইপগুলিতে সমস্ত কার্যক্রম",
   "pbac_desc_create_teams": "দল তৈরি করুন",
   "pbac_desc_view_team_details": "দলের বিবরণ দেখুন",
   "pbac_desc_update_team_settings": "দলের সেটিংস আপডেট করুন",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "দলের সদস্যদের আমন্ত্রণ জানান",
   "pbac_desc_remove_team_members": "দলের সদস্যদের অপসারণ করুন",
   "pbac_desc_change_team_member_role": "দলের সদস্যদের ভূমিকা পরিবর্তন করুন",
-  "pbac_desc_manage_teams": "দলের সকল কার্যক্রম",
+  "pbac_desc_manage_teams": "সংগঠনের টিমগুলি জুড়ে টিমগুলিতে সমস্ত কার্যক্রম",
   "pbac_desc_create_organization": "সংগঠন তৈরি করুন",
   "pbac_desc_view_organization_details": "সংগঠনের বিবরণ দেখুন",
   "pbac_desc_list_organization_members": "সংগঠনের সদস্যদের তালিকা দেখুন",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "সংগঠনের বুকিং দেখুন",
   "pbac_desc_view_booking_recordings": "বুকিং রেকর্ডিং দেখুন",
   "pbac_desc_update_bookings": "বুকিং আপডেট করুন",
-  "pbac_desc_manage_bookings": "বুকিংয়ের সকল কার্যক্রম",
+  "pbac_desc_manage_bookings": "সংগঠনের টিমগুলি জুড়ে বুকিংগুলিতে সমস্ত কার্যক্রম",
   "pbac_desc_view_team_insights": "দলের অন্তর্দৃষ্টি দেখুন",
   "pbac_desc_manage_team_insights": "দলের অন্তর্দৃষ্টি পরিচালনা করুন",
   "read_permission_auto_enabled_tooltip": "কোনো রিসোর্স তৈরি, আপডেট বা মুছে ফেলার সময় পড়ার অনুমতি স্বয়ংক্রিয়ভাবে সক্রিয় হয়",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "এই লিঙ্ক {{count}}টি বুকিং-এর জন্য ব্যবহার করা যাবে",
   "usage_based_generic_expiration_description": "এই লিঙ্ক নির্দিষ্ট সংখ্যক বুকিং-এর পরে মেয়াদ শেষ হওয়ার জন্য কনফিগার করা যেতে পারে",
   "usage_based_expiration_description_plural": "এই লিঙ্ক {{count}}টি বুকিং-এর জন্য ব্যবহার করা যাবে",
+  "booking_status": "বুকিংয়ের স্থিতি",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑ুষান্ত"
 }
