--- a/apps/web/public/static/locales/ca/common.json
+++ b/apps/web/public/static/locales/ca/common.json
@@ -871,6 +871,10 @@
   "create_team": "Crea un equip",
   "name": "Nom",
   "nameless_team": "Equip sense nom",
+  "oauth_clients": "Clients OAuth",
+  "oauth_clients_description": "Gestiona els clients OAuth per a la teva organització",
+  "create_oauth_client": "Crea un client OAuth",
+  "create_oauth_client_description": "Crea un nou client OAuth per a integracions de tercers",
   "oauth_client_deletion_message": "Client OAuth eliminat correctament",
   "create_new_team_description": "Crea un nou equip per col·laborar amb altres usuaris.",
   "create_new_team": "Crea un nou equip",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "Edita el tipus d'esdeveniment",
   "only_admin_can_see_members_of_org": "Aquesta organització és privada i només l'administrador o propietari de l'organització pot veure els seus membres",
   "only_admin_can_manage_sso_org": "Només l'administrador o propietari de l'organització pot gestionar la configuració SSO",
+  "only_admin_can_manage_directory_sync": "Només l'administrador o propietari de l'organització pot gestionar la configuració de sincronització de directoris",
+  "only_admin_can_manage_oauth_clients": "Només l'administrador o propietari de l'organització pot gestionar els clients OAuth",
   "collective_scheduling": "Programació col·lectiva",
   "make_it_easy_to_book": "Facilita la reserva amb el teu equip quan tothom està disponible",
   "find_the_best_person": "Troba la millor persona disponible i alterna entre el teu equip",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "Error en crear el rol",
   "error_updating_role": "Error en actualitzar el rol",
   "pbac_desc_create_roles": "Crear rols",
+  "pbac_resource_attributes": "Atributs",
+  "pbac_desc_view_organization_attributes": "Veure els atributs de l'organització",
+  "pbac_desc_update_organization_attributes": "Actualitzar els atributs de l'organització",
+  "pbac_desc_delete_organization_attributes": "Eliminar els atributs de l'organització",
+  "pbac_desc_create_organization_attributes": "Crear atributs de l'organització",
   "pbac_desc_view_roles": "Veure rols",
   "pbac_desc_update_roles": "Actualitzar rols",
   "pbac_desc_delete_roles": "Eliminar rols",
-  "pbac_desc_manage_roles": "Totes les accions sobre rols",
+  "pbac_desc_manage_roles": "Totes les accions sobre rols a través dels equips de l'organització",
   "pbac_desc_create_event_types": "Crear tipus d'esdeveniments",
   "pbac_desc_view_event_types": "Veure tipus d'esdeveniments",
   "pbac_desc_update_event_types": "Actualitzar tipus d'esdeveniments",
   "pbac_desc_delete_event_types": "Eliminar tipus d'esdeveniments",
-  "pbac_desc_manage_event_types": "Totes les accions sobre tipus d'esdeveniments",
+  "pbac_desc_manage_event_types": "Totes les accions sobre tipus d'esdeveniments a través dels equips de l'organització",
   "pbac_desc_create_teams": "Crear equips",
   "pbac_desc_view_team_details": "Veure detalls de l'equip",
   "pbac_desc_update_team_settings": "Actualitzar configuració de l'equip",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "Convidar membres a l'equip",
   "pbac_desc_remove_team_members": "Eliminar membres de l'equip",
   "pbac_desc_change_team_member_role": "Canviar el rol dels membres de l'equip",
-  "pbac_desc_manage_teams": "Totes les accions sobre equips",
+  "pbac_desc_manage_teams": "Totes les accions sobre equips a través dels equips de l'organització",
   "pbac_desc_create_organization": "Crear organització",
   "pbac_desc_view_organization_details": "Veure detalls de l'organització",
   "pbac_desc_list_organization_members": "Llistar membres de l'organització",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "Veure reserves de l'organització",
   "pbac_desc_view_booking_recordings": "Veure enregistraments de reserves",
   "pbac_desc_update_bookings": "Actualitzar reserves",
-  "pbac_desc_manage_bookings": "Totes les accions sobre reserves",
+  "pbac_desc_manage_bookings": "Totes les accions sobre reserves a través dels equips de l'organització",
   "pbac_desc_view_team_insights": "Veure estadístiques d'equip",
   "pbac_desc_manage_team_insights": "Gestionar estadístiques d'equip",
   "read_permission_auto_enabled_tooltip": "El permís de lectura s'activa automàticament quan es crea, actualitza o elimina un recurs",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "Aquest enllaç es pot utilitzar per a {{count}} reserva",
   "usage_based_generic_expiration_description": "Aquest enllaç es pot configurar perquè caduqui després d'un nombre determinat de reserves",
   "usage_based_expiration_description_plural": "Aquest enllaç es pot utilitzar per a {{count}} reserves",
+  "booking_status": "Estat de la reserva",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Afegiu les vostres noves cadenes a dalt ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
