--- a/apps/web/public/static/locales/cs/common.json
+++ b/apps/web/public/static/locales/cs/common.json
@@ -871,6 +871,10 @@
   "create_team": "Vytvořit tým",
   "name": "Jméno",
   "nameless_team": "Tým bez názvu",
+  "oauth_clients": "OAuth klienti",
+  "oauth_clients_description": "Správa OAuth klientů pro vaši organizaci",
+  "create_oauth_client": "Vytvořit OAuth klienta",
+  "create_oauth_client_description": "Vytvořte nového OAuth klienta pro integraci s třetími stranami",
   "oauth_client_deletion_message": "OAuth klient byl úspěšně smazán",
   "create_new_team_description": "Vytvořte nový tým pro spolupráci s uživateli.",
   "create_new_team": "Vytvořit nový tým",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "Upravit typ události",
   "only_admin_can_see_members_of_org": "Tato organizace je soukromá a pouze administrátor nebo vlastník organizace může vidět její členy.",
   "only_admin_can_manage_sso_org": "Pouze administrátor nebo vlastník organizace může spravovat nastavení SSO",
+  "only_admin_can_manage_directory_sync": "Pouze administrátor nebo vlastník organizace může spravovat nastavení synchronizace adresáře",
+  "only_admin_can_manage_oauth_clients": "Pouze administrátor nebo vlastník organizace může spravovat OAuth klienty",
   "collective_scheduling": "Kolektivní plánování",
   "make_it_easy_to_book": "Usnadněte si rezervaci týmu, pokud jsou všichni k dispozici.",
   "find_the_best_person": "Najděte nejlepší dostupnou osobu a procházejte tým.",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "Chyba při vytváření role",
   "error_updating_role": "Chyba při aktualizaci role",
   "pbac_desc_create_roles": "Vytvářet role",
+  "pbac_resource_attributes": "Atributy",
+  "pbac_desc_view_organization_attributes": "Zobrazit atributy organizace",
+  "pbac_desc_update_organization_attributes": "Aktualizovat atributy organizace",
+  "pbac_desc_delete_organization_attributes": "Odstranit atributy organizace",
+  "pbac_desc_create_organization_attributes": "Vytvořit atributy organizace",
   "pbac_desc_view_roles": "Zobrazit role",
   "pbac_desc_update_roles": "Aktualizovat role",
   "pbac_desc_delete_roles": "Odstraňovat role",
-  "pbac_desc_manage_roles": "Všechny akce s rolemi",
+  "pbac_desc_manage_roles": "Všechny akce s rolemi napříč týmy organizace",
   "pbac_desc_create_event_types": "Vytvářet typy událostí",
   "pbac_desc_view_event_types": "Zobrazit typy událostí",
   "pbac_desc_update_event_types": "Aktualizovat typy událostí",
   "pbac_desc_delete_event_types": "Odstraňovat typy událostí",
-  "pbac_desc_manage_event_types": "Všechny akce s typy událostí",
+  "pbac_desc_manage_event_types": "Všechny akce s typy událostí napříč týmy organizace",
   "pbac_desc_create_teams": "Vytvářet týmy",
   "pbac_desc_view_team_details": "Zobrazit detaily týmu",
   "pbac_desc_update_team_settings": "Aktualizovat nastavení týmu",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "Pozvat členy týmu",
   "pbac_desc_remove_team_members": "Odebrat členy týmu",
   "pbac_desc_change_team_member_role": "Změnit roli členů týmu",
-  "pbac_desc_manage_teams": "Všechny akce v týmech",
+  "pbac_desc_manage_teams": "Všechny akce s týmy napříč týmy organizace",
   "pbac_desc_create_organization": "Vytvořit organizaci",
   "pbac_desc_view_organization_details": "Zobrazit detaily organizace",
   "pbac_desc_list_organization_members": "Seznam členů organizace",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "Zobrazit rezervace organizace",
   "pbac_desc_view_booking_recordings": "Zobrazit záznamy rezervací",
   "pbac_desc_update_bookings": "Aktualizovat rezervace",
-  "pbac_desc_manage_bookings": "Všechny akce s rezervacemi",
+  "pbac_desc_manage_bookings": "Všechny akce s rezervacemi napříč týmy organizace",
   "pbac_desc_view_team_insights": "Zobrazit přehledy týmu",
   "pbac_desc_manage_team_insights": "Spravovat přehledy týmu",
   "read_permission_auto_enabled_tooltip": "Oprávnění ke čtení je automaticky povoleno při vytváření, aktualizaci nebo mazání zdroje",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "Tento odkaz lze použít pro {{count}} rezervaci",
   "usage_based_generic_expiration_description": "Tento odkaz lze nastavit tak, aby jeho platnost vypršela po určitém počtu rezervací",
   "usage_based_expiration_description_plural": "Tento odkaz lze použít pro {{count}} rezervace",
+  "booking_status": "Stav rezervace",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Přidejte své nové řetězce nahoru ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
