--- a/apps/web/public/static/locales/da/common.json
+++ b/apps/web/public/static/locales/da/common.json
@@ -871,6 +871,10 @@
   "create_team": "Opret Team",
   "name": "Navn",
   "nameless_team": "Unavngivet team",
+  "oauth_clients": "OAuth-klienter",
+  "oauth_clients_description": "Administrer OAuth-klienter for din organisation",
+  "create_oauth_client": "Opret OAuth-klient",
+  "create_oauth_client_description": "Opret en ny OAuth-klient til tredjepartsintegrationer",
   "oauth_client_deletion_message": "OAuth-klient blev slettet",
   "create_new_team_description": "Opret et nyt team for at samarbejde med brugerne.",
   "create_new_team": "Opret et nyt team",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "Redigér begivenhedstype",
   "only_admin_can_see_members_of_org": "Denne organisation er privat, og kun organisationens administrator eller ejer kan se dens medlemmer.",
   "only_admin_can_manage_sso_org": "Kun organisationens administrator eller ejer kan administrere SSO-indstillinger",
+  "only_admin_can_manage_directory_sync": "Kun organisationens administrator eller ejer kan administrere indstillinger for mappe-synkronisering",
+  "only_admin_can_manage_oauth_clients": "Kun organisationens administrator eller ejer kan administrere OAuth-klienter",
   "collective_scheduling": "Kollektiv Planlægning",
   "make_it_easy_to_book": "Gør det nemt at booke dit team, når alle er tilgængelige.",
   "find_the_best_person": "Find den bedste person tilgængelig, og cykl gennem dit team.",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "Fejl ved oprettelse af rolle",
   "error_updating_role": "Fejl ved opdatering af rolle",
   "pbac_desc_create_roles": "Opret roller",
+  "pbac_resource_attributes": "Egenskaber",
+  "pbac_desc_view_organization_attributes": "Se organisationsattributter",
+  "pbac_desc_update_organization_attributes": "Opdater organisationsattributter",
+  "pbac_desc_delete_organization_attributes": "Slet organisationsattributter",
+  "pbac_desc_create_organization_attributes": "Opret organisationsattributter",
   "pbac_desc_view_roles": "Vis roller",
   "pbac_desc_update_roles": "Opdater roller",
   "pbac_desc_delete_roles": "Slet roller",
-  "pbac_desc_manage_roles": "Alle handlinger på roller",
+  "pbac_desc_manage_roles": "Alle handlinger på roller på tværs af organisationens teams",
   "pbac_desc_create_event_types": "Opret begivenhedstyper",
   "pbac_desc_view_event_types": "Vis begivenhedstyper",
   "pbac_desc_update_event_types": "Opdater begivenhedstyper",
   "pbac_desc_delete_event_types": "Slet begivenhedstyper",
-  "pbac_desc_manage_event_types": "Alle handlinger på begivenhedstyper",
+  "pbac_desc_manage_event_types": "Alle handlinger på begivenhedstyper på tværs af organisationens teams",
   "pbac_desc_create_teams": "Opret teams",
   "pbac_desc_view_team_details": "Vis teamdetaljer",
   "pbac_desc_update_team_settings": "Opdater teamindstillinger",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "Invitér teammedlemmer",
   "pbac_desc_remove_team_members": "Fjern teammedlemmer",
   "pbac_desc_change_team_member_role": "Skift rolle for teammedlemmer",
-  "pbac_desc_manage_teams": "Alle handlinger på teams",
+  "pbac_desc_manage_teams": "Alle handlinger på teams på tværs af organisationens teams",
   "pbac_desc_create_organization": "Opret organisation",
   "pbac_desc_view_organization_details": "Se organisationsdetaljer",
   "pbac_desc_list_organization_members": "Vis organisationsmedlemmer",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "Se organisationsbookinger",
   "pbac_desc_view_booking_recordings": "Se bookingoptagelser",
   "pbac_desc_update_bookings": "Opdater bookinger",
-  "pbac_desc_manage_bookings": "Alle handlinger på bookinger",
+  "pbac_desc_manage_bookings": "Alle handlinger på bookinger på tværs af organisationens teams",
   "pbac_desc_view_team_insights": "Se teamindsigter",
   "pbac_desc_manage_team_insights": "Administrer teamindsigter",
   "read_permission_auto_enabled_tooltip": "Læs tilladelse aktiveres automatisk, når en ressource oprettes, opdateres eller slettes",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "Dette link kan bruges til {{count}} booking",
   "usage_based_generic_expiration_description": "Dette link kan konfigureres til at udløbe efter et bestemt antal bookinger",
   "usage_based_expiration_description_plural": "Dette link kan bruges til {{count}} bookinger",
+  "booking_status": "Bookingstatus",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Tilføj dine nye strenge ovenfor her ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
