--- a/apps/web/public/static/locales/de/common.json
+++ b/apps/web/public/static/locales/de/common.json
@@ -871,6 +871,10 @@
   "create_team": "Team anlegen",
   "name": "Name",
   "nameless_team": "Namenloses Team",
+  "oauth_clients": "OAuth-Clients",
+  "oauth_clients_description": "Verwalten Sie OAuth-Clients für Ihre Organisation",
+  "create_oauth_client": "OAuth-Client erstellen",
+  "create_oauth_client_description": "Erstellen Sie einen neuen OAuth-Client für Drittanbieter-Integrationen",
   "oauth_client_deletion_message": "OAuth-Client erfolgreich gelöscht",
   "create_new_team_description": "Erstellen Sie ein neues Team, um mit anderen zusammenzuarbeiten.",
   "create_new_team": "Ein neues Team erstellen",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "Termintyp bearbeiten",
   "only_admin_can_see_members_of_org": "Diese Organisation ist privat und nur der Administrator oder Eigentümer der Organisation kann ihre Mitglieder sehen.",
   "only_admin_can_manage_sso_org": "Nur der Administrator oder Eigentümer der Organisation kann die SSO-Einstellungen verwalten",
+  "only_admin_can_manage_directory_sync": "Nur der Administrator oder Eigentümer der Organisation kann die Verzeichnissynchronisierungseinstellungen verwalten",
+  "only_admin_can_manage_oauth_clients": "Nur der Administrator oder Eigentümer der Organisation kann OAuth-Clients verwalten",
   "collective_scheduling": "Kollektive Terminplanung",
   "make_it_easy_to_book": "Machen Sie es einfach, Ihr Team zu buchen, wenn jeder verfügbar ist.",
   "find_the_best_person": "Finden Sie die beste verfügbare Person und rotieren Sie durch Ihr Team.",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "Fehler beim Erstellen der Rolle",
   "error_updating_role": "Fehler beim Aktualisieren der Rolle",
   "pbac_desc_create_roles": "Rollen erstellen",
+  "pbac_resource_attributes": "Attribute",
+  "pbac_desc_view_organization_attributes": "Organisationsattribute anzeigen",
+  "pbac_desc_update_organization_attributes": "Organisationsattribute aktualisieren",
+  "pbac_desc_delete_organization_attributes": "Organisationsattribute löschen",
+  "pbac_desc_create_organization_attributes": "Organisationsattribute erstellen",
   "pbac_desc_view_roles": "Rollen anzeigen",
   "pbac_desc_update_roles": "Rollen aktualisieren",
   "pbac_desc_delete_roles": "Rollen löschen",
-  "pbac_desc_manage_roles": "Alle Aktionen für Rollen",
+  "pbac_desc_manage_roles": "Alle Aktionen für Rollen über Organisationsteams hinweg",
   "pbac_desc_create_event_types": "Ereignistypen erstellen",
   "pbac_desc_view_event_types": "Ereignistypen anzeigen",
   "pbac_desc_update_event_types": "Ereignistypen aktualisieren",
   "pbac_desc_delete_event_types": "Ereignistypen löschen",
-  "pbac_desc_manage_event_types": "Alle Aktionen für Ereignistypen",
+  "pbac_desc_manage_event_types": "Alle Aktionen für Ereignistypen über Organisationsteams hinweg",
   "pbac_desc_create_teams": "Teams erstellen",
   "pbac_desc_view_team_details": "Teamdetails anzeigen",
   "pbac_desc_update_team_settings": "Teameinstellungen aktualisieren",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "Teammitglieder einladen",
   "pbac_desc_remove_team_members": "Teammitglieder entfernen",
   "pbac_desc_change_team_member_role": "Rolle von Teammitgliedern ändern",
-  "pbac_desc_manage_teams": "Alle Aktionen für Teams",
+  "pbac_desc_manage_teams": "Alle Aktionen für Teams über Organisationsteams hinweg",
   "pbac_desc_create_organization": "Organisation erstellen",
   "pbac_desc_view_organization_details": "Organisationsdetails anzeigen",
   "pbac_desc_list_organization_members": "Organisationsmitglieder auflisten",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "Organisationsbuchungen anzeigen",
   "pbac_desc_view_booking_recordings": "Buchungsaufzeichnungen anzeigen",
   "pbac_desc_update_bookings": "Buchungen aktualisieren",
-  "pbac_desc_manage_bookings": "Alle Aktionen für Buchungen",
+  "pbac_desc_manage_bookings": "Alle Aktionen für Buchungen über Organisationsteams hinweg",
   "pbac_desc_view_team_insights": "Team-Insights anzeigen",
   "pbac_desc_manage_team_insights": "Team-Insights verwalten",
   "read_permission_auto_enabled_tooltip": "Leseberechtigung wird automatisch aktiviert, wenn eine Ressource erstellt, aktualisiert oder gelöscht wird",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "Dieser Link kann für {{count}} Buchung verwendet werden",
   "usage_based_generic_expiration_description": "Dieser Link kann so konfiguriert werden, dass er nach einer festgelegten Anzahl von Buchungen abläuft",
   "usage_based_expiration_description_plural": "Dieser Link kann für {{count}} Buchungen verwendet werden",
+  "booking_status": "Buchungsstatus",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Fügen Sie Ihre neuen Code-Zeilen über dieser hinzu ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
