--- a/apps/web/public/static/locales/el/common.json
+++ b/apps/web/public/static/locales/el/common.json
@@ -871,6 +871,10 @@
   "create_team": "Δημιουργία ομάδας",
   "name": "Όνομα",
   "nameless_team": "Ανώνυμη ομάδα",
+  "oauth_clients": "Πελάτες OAuth",
+  "oauth_clients_description": "Διαχείριση πελατών OAuth για τον οργανισμό σας",
+  "create_oauth_client": "Δημιουργία πελάτη OAuth",
+  "create_oauth_client_description": "Δημιουργία νέου πελάτη OAuth για ενσωματώσεις τρίτων",
   "oauth_client_deletion_message": "Ο πελάτης OAuth διαγράφηκε επιτυχώς",
   "create_new_team_description": "Δημιουργήστε μια νέα ομάδα για να συνεργαστείτε με άλλους χρήστες.",
   "create_new_team": "Δημιουργία νέας ομάδας",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "Επεξεργασία τύπου εκδήλωσης",
   "only_admin_can_see_members_of_org": "Αυτός ο Οργανισμός είναι ιδιωτικός και μόνο ο διαχειριστής ή ο ιδιοκτήτης του οργανισμού μπορεί να δει τα μέλη του.",
   "only_admin_can_manage_sso_org": "Μόνο ο διαχειριστής ή ο ιδιοκτήτης του οργανισμού μπορεί να διαχειριστεί τις ρυθμίσεις SSO",
+  "only_admin_can_manage_directory_sync": "Μόνο ο διαχειριστής ή ο ιδιοκτήτης του οργανισμού μπορεί να διαχειριστεί τις ρυθμίσεις συγχρονισμού καταλόγου",
+  "only_admin_can_manage_oauth_clients": "Μόνο ο διαχειριστής ή ο ιδιοκτήτης του οργανισμού μπορεί να διαχειριστεί τους πελάτες OAuth",
   "collective_scheduling": "Συλλογικός προγραμματισμός",
   "make_it_easy_to_book": "Κάντε εύκολο το κλείσιμο ραντεβού με την ομάδα σας όταν όλοι είναι διαθέσιμοι.",
   "find_the_best_person": "Βρείτε το καλύτερο διαθέσιμο άτομο και κυκλική εναλλαγή μεταξύ της ομάδας σας.",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "Σφάλμα κατά τη δημιουργία ρόλου",
   "error_updating_role": "Σφάλμα κατά την ενημέρωση ρόλου",
   "pbac_desc_create_roles": "Δημιουργία ρόλων",
+  "pbac_resource_attributes": "Χαρακτηριστικά",
+  "pbac_desc_view_organization_attributes": "Προβολή χαρακτηριστικών οργανισμού",
+  "pbac_desc_update_organization_attributes": "Ενημέρωση χαρακτηριστικών οργανισμού",
+  "pbac_desc_delete_organization_attributes": "Διαγραφή χαρακτηριστικών οργανισμού",
+  "pbac_desc_create_organization_attributes": "Δημιουργία χαρακτηριστικών οργανισμού",
   "pbac_desc_view_roles": "Προβολή ρόλων",
   "pbac_desc_update_roles": "Ενημέρωση ρόλων",
   "pbac_desc_delete_roles": "Διαγραφή ρόλων",
-  "pbac_desc_manage_roles": "Όλες οι ενέργειες στους ρόλους",
+  "pbac_desc_manage_roles": "Όλες οι ενέργειες στους ρόλους σε όλες τις ομάδες του οργανισμού",
   "pbac_desc_create_event_types": "Δημιουργία τύπων εκδηλώσεων",
   "pbac_desc_view_event_types": "Προβολή τύπων εκδηλώσεων",
   "pbac_desc_update_event_types": "Ενημέρωση τύπων εκδηλώσεων",
   "pbac_desc_delete_event_types": "Διαγραφή τύπων εκδηλώσεων",
-  "pbac_desc_manage_event_types": "Όλες οι ενέργειες στους τύπους εκδηλώσεων",
+  "pbac_desc_manage_event_types": "Όλες οι ενέργειες στους τύπους εκδηλώσεων σε όλες τις ομάδες του οργανισμού",
   "pbac_desc_create_teams": "Δημιουργία ομάδων",
   "pbac_desc_view_team_details": "Προβολή λεπτομερειών ομάδας",
   "pbac_desc_update_team_settings": "Ενημέρωση ρυθμίσεων ομάδας",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "Πρόσκληση μελών ομάδας",
   "pbac_desc_remove_team_members": "Αφαίρεση μελών ομάδας",
   "pbac_desc_change_team_member_role": "Αλλαγή ρόλου μελών ομάδας",
-  "pbac_desc_manage_teams": "Όλες οι ενέργειες στις ομάδες",
+  "pbac_desc_manage_teams": "Όλες οι ενέργειες στις ομάδες σε όλες τις ομάδες του οργανισμού",
   "pbac_desc_create_organization": "Δημιουργία οργανισμού",
   "pbac_desc_view_organization_details": "Προβολή λεπτομερειών οργανισμού",
   "pbac_desc_list_organization_members": "Λίστα μελών οργανισμού",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "Προβολή κρατήσεων οργανισμού",
   "pbac_desc_view_booking_recordings": "Προβολή εγγραφών κρατήσεων",
   "pbac_desc_update_bookings": "Ενημέρωση κρατήσεων",
-  "pbac_desc_manage_bookings": "Όλες οι ενέργειες στις κρατήσεις",
+  "pbac_desc_manage_bookings": "Όλες οι ενέργειες στις κρατήσεις σε όλες τις ομάδες του οργανισμού",
   "pbac_desc_view_team_insights": "Προβολή αναλύσεων ομάδας",
   "pbac_desc_manage_team_insights": "Διαχείριση αναλύσεων ομάδας",
   "read_permission_auto_enabled_tooltip": "Το δικαίωμα ανάγνωσης ενεργοποιείται αυτόματα κατά τη δημιουργία, ενημέρωση ή διαγραφή ενός πόρου",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "Αυτός ο σύνδεσμος μπορεί να χρησιμοποιηθεί για {{count}} κράτηση",
   "usage_based_generic_expiration_description": "Αυτός ο σύνδεσμος μπορεί να ρυθμιστεί ώστε να λήγει μετά από έναν συγκεκριμένο αριθμό κρατήσεων",
   "usage_based_expiration_description_plural": "Αυτός ο σύνδεσμος μπορεί να χρησιμοποιηθεί για {{count}} κρατήσεις",
+  "booking_status": "Κατάσταση κράτησης",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Προσθέστε τις νέες συμβολοσειρές σας πάνω από εδώ ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
