--- a/apps/web/public/static/locales/es-419/common.json
+++ b/apps/web/public/static/locales/es-419/common.json
@@ -871,6 +871,10 @@
   "create_team": "Crear Equipo",
   "name": "Nombre",
   "nameless_team": "Equipo sin nombre",
+  "oauth_clients": "Clientes OAuth",
+  "oauth_clients_description": "Administra los clientes OAuth para tu organización",
+  "create_oauth_client": "Crear cliente OAuth",
+  "create_oauth_client_description": "Crea un nuevo cliente OAuth para integraciones de terceros",
   "oauth_client_deletion_message": "Cliente OAuth eliminado exitosamente",
   "create_new_team_description": "Crea un nuevo equipo para colaborar con otros usuarios.",
   "create_new_team": "Crear un nuevo equipo",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "Editar tipo de evento",
   "only_admin_can_see_members_of_org": "Esta organización es privada, y solo el administrador o propietario de la organización puede ver a sus miembros.",
   "only_admin_can_manage_sso_org": "Solo el administrador o propietario de la organización puede gestionar la configuración de SSO",
+  "only_admin_can_manage_directory_sync": "Solo el administrador o propietario de la organización puede gestionar la configuración de sincronización de directorios",
+  "only_admin_can_manage_oauth_clients": "Solo el administrador o propietario de la organización puede gestionar los clientes OAuth",
   "collective_scheduling": "Programación colectiva",
   "make_it_easy_to_book": "Haz que sea fácil reservar cuando todos estén disponibles.",
   "find_the_best_person": "Encuentra a la mejor persona disponible y rota a través de tu equipo.",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "Error al crear el rol",
   "error_updating_role": "Error al actualizar el rol",
   "pbac_desc_create_roles": "Crear roles",
+  "pbac_resource_attributes": "Atributos",
+  "pbac_desc_view_organization_attributes": "Ver atributos de la organización",
+  "pbac_desc_update_organization_attributes": "Actualizar atributos de la organización",
+  "pbac_desc_delete_organization_attributes": "Eliminar atributos de la organización",
+  "pbac_desc_create_organization_attributes": "Crear atributos de la organización",
   "pbac_desc_view_roles": "Ver roles",
   "pbac_desc_update_roles": "Actualizar roles",
   "pbac_desc_delete_roles": "Eliminar roles",
-  "pbac_desc_manage_roles": "Todas las acciones en roles",
+  "pbac_desc_manage_roles": "Todas las acciones en roles a través de los equipos de la organización",
   "pbac_desc_create_event_types": "Crear tipos de eventos",
   "pbac_desc_view_event_types": "Ver tipos de eventos",
   "pbac_desc_update_event_types": "Actualizar tipos de eventos",
   "pbac_desc_delete_event_types": "Eliminar tipos de eventos",
-  "pbac_desc_manage_event_types": "Todas las acciones en tipos de eventos",
+  "pbac_desc_manage_event_types": "Todas las acciones en tipos de eventos a través de los equipos de la organización",
   "pbac_desc_create_teams": "Crear equipos",
   "pbac_desc_view_team_details": "Ver detalles del equipo",
   "pbac_desc_update_team_settings": "Actualizar configuración del equipo",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "Invitar miembros al equipo",
   "pbac_desc_remove_team_members": "Eliminar miembros del equipo",
   "pbac_desc_change_team_member_role": "Cambiar el rol de los miembros del equipo",
-  "pbac_desc_manage_teams": "Todas las acciones en equipos",
+  "pbac_desc_manage_teams": "Todas las acciones en equipos a través de los equipos de la organización",
   "pbac_desc_create_organization": "Crear organización",
   "pbac_desc_view_organization_details": "Ver detalles de la organización",
   "pbac_desc_list_organization_members": "Listar miembros de la organización",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "Ver reservas de la organización",
   "pbac_desc_view_booking_recordings": "Ver grabaciones de reservas",
   "pbac_desc_update_bookings": "Actualizar reservas",
-  "pbac_desc_manage_bookings": "Todas las acciones en reservas",
+  "pbac_desc_manage_bookings": "Todas las acciones en reservas a través de los equipos de la organización",
   "pbac_desc_view_team_insights": "Ver estadísticas del equipo",
   "pbac_desc_manage_team_insights": "Administrar estadísticas del equipo",
   "read_permission_auto_enabled_tooltip": "El permiso de lectura se habilita automáticamente al crear, actualizar o eliminar un recurso",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "Este enlace puede usarse para {{count}} reserva",
   "usage_based_generic_expiration_description": "Este enlace puede configurarse para expirar después de un número determinado de reservas",
   "usage_based_expiration_description_plural": "Este enlace puede usarse para {{count}} reservas",
+  "booking_status": "Estado de la reserva",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Agrega tus nuevas cadenas arriba de esta línea ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
