--- a/apps/web/public/static/locales/et/common.json
+++ b/apps/web/public/static/locales/et/common.json
@@ -871,6 +871,10 @@
   "create_team": "Loo meeskond",
   "name": "Nimi",
   "nameless_team": "Nimetu meeskond",
+  "oauth_clients": "OAuth kliendid",
+  "oauth_clients_description": "Halda oma organisatsiooni OAuth kliente",
+  "create_oauth_client": "Loo OAuth klient",
+  "create_oauth_client_description": "Loo uus OAuth klient kolmandate osapoolte integratsioonide jaoks",
   "oauth_client_deletion_message": "OAuth klient edukalt kustutatud",
   "create_new_team_description": "Looge kasutajatega koostöö tegemiseks uus meeskond.",
   "create_new_team": "Loo uus meeskond",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "Muuda sündmuse tüüpi",
   "only_admin_can_see_members_of_org": "See organisatsioon on privaatne ja selle liikmeid saavad vaadata ainult organisatsiooni administraator või omanik.",
   "only_admin_can_manage_sso_org": "Ainult organisatsiooni administraator või omanik saab hallata SSO seadeid",
+  "only_admin_can_manage_directory_sync": "Ainult organisatsiooni administraator või omanik saab hallata kataloogi sünkroonimise seadeid",
+  "only_admin_can_manage_oauth_clients": "Ainult organisatsiooni administraator või omanik saab hallata OAuth kliente",
   "collective_scheduling": "Kollektiivne ajakava",
   "make_it_easy_to_book": "Tehke oma meeskonna broneerimine lihtsaks, kui kõik on saadaval.",
   "find_the_best_person": "Leidke parim saadaolev inimene ja sõitke läbi oma meeskonna.",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "Viga rolli loomisel",
   "error_updating_role": "Viga rolli uuendamisel",
   "pbac_desc_create_roles": "Loo rolle",
+  "pbac_resource_attributes": "Atribuudid",
+  "pbac_desc_view_organization_attributes": "Vaata organisatsiooni atribuute",
+  "pbac_desc_update_organization_attributes": "Uuenda organisatsiooni atribuute",
+  "pbac_desc_delete_organization_attributes": "Kustuta organisatsiooni atribuute",
+  "pbac_desc_create_organization_attributes": "Loo organisatsiooni atribuute",
   "pbac_desc_view_roles": "Vaata rolle",
   "pbac_desc_update_roles": "Uuenda rolle",
   "pbac_desc_delete_roles": "Kustuta rolle",
-  "pbac_desc_manage_roles": "Kõik toimingud rollidega",
+  "pbac_desc_manage_roles": "Kõik toimingud rollidega organisatsiooni meeskondades",
   "pbac_desc_create_event_types": "Loo sündmuse tüüpe",
   "pbac_desc_view_event_types": "Vaata sündmuse tüüpe",
   "pbac_desc_update_event_types": "Uuenda sündmuse tüüpe",
   "pbac_desc_delete_event_types": "Kustuta sündmuse tüüpe",
-  "pbac_desc_manage_event_types": "Kõik toimingud sündmuse tüüpidega",
+  "pbac_desc_manage_event_types": "Kõik toimingud sündmuste tüüpidega organisatsiooni meeskondades",
   "pbac_desc_create_teams": "Loo meeskondi",
   "pbac_desc_view_team_details": "Vaata meeskonna üksikasju",
   "pbac_desc_update_team_settings": "Uuenda meeskonna seadeid",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "Kutsu meeskonnaliikmeid",
   "pbac_desc_remove_team_members": "Eemalda meeskonnaliikmeid",
   "pbac_desc_change_team_member_role": "Muuda meeskonnaliikmete rolle",
-  "pbac_desc_manage_teams": "Kõik toimingud meeskondadega",
+  "pbac_desc_manage_teams": "Kõik toimingud meeskondadega organisatsiooni meeskondades",
   "pbac_desc_create_organization": "Loo organisatsioon",
   "pbac_desc_view_organization_details": "Vaata organisatsiooni üksikasju",
   "pbac_desc_list_organization_members": "Kuva organisatsiooni liikmed",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "Vaata organisatsiooni broneeringuid",
   "pbac_desc_view_booking_recordings": "Vaata broneeringute salvestisi",
   "pbac_desc_update_bookings": "Uuenda broneeringuid",
-  "pbac_desc_manage_bookings": "Kõik toimingud broneeringutega",
+  "pbac_desc_manage_bookings": "Kõik toimingud broneeringutega organisatsiooni meeskondades",
   "pbac_desc_view_team_insights": "Vaata meeskonna ülevaateid",
   "pbac_desc_manage_team_insights": "Halda meeskonna ülevaateid",
   "read_permission_auto_enabled_tooltip": "Lugemisõigus lubatakse automaatselt ressursi loomisel, uuendamisel või kustutamisel",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "Seda linki saab kasutada {{count}} broneeringuks",
   "usage_based_generic_expiration_description": "Seda linki saab seadistada aeguma pärast kindlat arvu broneeringuid",
   "usage_based_expiration_description_plural": "Seda linki saab kasutada {{count}} broneeringuks",
+  "booking_status": "Broneeringu staatus",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Add your new strings above here ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
