--- a/apps/web/public/static/locales/eu/common.json
+++ b/apps/web/public/static/locales/eu/common.json
@@ -871,6 +871,10 @@
   "create_team": "Sortu taldea",
   "name": "Izena",
   "nameless_team": "Izenik gabeko taldea",
+  "oauth_clients": "OAuth bezeroak",
+  "oauth_clients_description": "Kudeatu zure erakundearen OAuth bezeroak",
+  "create_oauth_client": "Sortu OAuth bezeroa",
+  "create_oauth_client_description": "Sortu OAuth bezero berri bat hirugarrenen integrazioetarako",
   "oauth_client_deletion_message": "OAuth bezeroa behar bezala ezabatu da",
   "create_new_team_description": "Sortu talde berri bat erabiltzaileekin elkarlanean aritzeko.",
   "create_new_team": "Sortu talde berri bat",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "Editatu gertaera mota",
   "only_admin_can_see_members_of_org": "Erakunde hau pribatua da, eta erakundeko administratzaileak edo jabeak soilik ikus ditzake kideak",
   "only_admin_can_manage_sso_org": "Erakundeko administratzaileak edo jabeak soilik kudeatu ditzake SSO ezarpenak",
+  "only_admin_can_manage_directory_sync": "Erakundearen administratzaileak edo jabeak soilik kudeatu ditzake direktorio sinkronizazio ezarpenak",
+  "only_admin_can_manage_oauth_clients": "Erakundearen administratzaileak edo jabeak soilik kudeatu ditzake OAuth bezeroak",
   "collective_scheduling": "Taldeko antolaketa",
   "make_it_easy_to_book": "Erraztu zure taldea erreserbatzea denak eskuragarri daudenean",
   "find_the_best_person": "Aurkitu eskuragarri dagoen pertsona egokiena eta txandakatu zure taldean zehar",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "Errorea rola sortzerakoan",
   "error_updating_role": "Errorea rola eguneratzerakoan",
   "pbac_desc_create_roles": "Rolak sortu",
+  "pbac_resource_attributes": "Atributuak",
+  "pbac_desc_view_organization_attributes": "Ikusi erakundearen atributuak",
+  "pbac_desc_update_organization_attributes": "Eguneratu erakundearen atributuak",
+  "pbac_desc_delete_organization_attributes": "Ezabatu erakundearen atributuak",
+  "pbac_desc_create_organization_attributes": "Sortu erakundearen atributuak",
   "pbac_desc_view_roles": "Rolak ikusi",
   "pbac_desc_update_roles": "Rolak eguneratu",
   "pbac_desc_delete_roles": "Rolak ezabatu",
-  "pbac_desc_manage_roles": "Roletan ekintza guztiak",
+  "pbac_desc_manage_roles": "Erakundeko talde guztietako roletan ekintza guztiak",
   "pbac_desc_create_event_types": "Gertaera motak sortu",
   "pbac_desc_view_event_types": "Gertaera motak ikusi",
   "pbac_desc_update_event_types": "Gertaera motak eguneratu",
   "pbac_desc_delete_event_types": "Gertaera motak ezabatu",
-  "pbac_desc_manage_event_types": "Gertaera motetan ekintza guztiak",
+  "pbac_desc_manage_event_types": "Erakundeko talde guztietako gertaera motetan ekintza guztiak",
   "pbac_desc_create_teams": "Taldeak sortu",
   "pbac_desc_view_team_details": "Taldearen xehetasunak ikusi",
   "pbac_desc_update_team_settings": "Taldearen ezarpenak eguneratu",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "Taldekideak gonbidatu",
   "pbac_desc_remove_team_members": "Taldekideak kendu",
   "pbac_desc_change_team_member_role": "Taldekideen rola aldatu",
-  "pbac_desc_manage_teams": "Taldeetan ekintza guztiak",
+  "pbac_desc_manage_teams": "Erakundeko talde guztietako taldeetan ekintza guztiak",
   "pbac_desc_create_organization": "Erakundea sortu",
   "pbac_desc_view_organization_details": "Erakundearen xehetasunak ikusi",
   "pbac_desc_list_organization_members": "Erakundeko kideen zerrenda egin",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "Erakundearen erreserbak ikusi",
   "pbac_desc_view_booking_recordings": "Erreserben grabaketak ikusi",
   "pbac_desc_update_bookings": "Erreserbak eguneratu",
-  "pbac_desc_manage_bookings": "Erreserbetan ekintza guztiak",
+  "pbac_desc_manage_bookings": "Erakundeko talde guztietako erreserbetan ekintza guztiak",
   "pbac_desc_view_team_insights": "Taldearen estatistikak ikusi",
   "pbac_desc_manage_team_insights": "Taldearen estatistikak kudeatu",
   "read_permission_auto_enabled_tooltip": "Irakurtzeko baimena automatikoki gaituta dago baliabide bat sortu, eguneratu edo ezabatzean",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "Esteka hau {{count}} erreserba egiteko erabil daiteke",
   "usage_based_generic_expiration_description": "Esteka hau konfigura daiteke erreserba kopuru jakin baten ondoren iraungitzeko",
   "usage_based_expiration_description_plural": "Esteka hau {{count}} erreserba egiteko erabil daiteke",
+  "booking_status": "Erreserba egoera",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Gehitu zure kate berriak honen gainean ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
