--- a/apps/web/public/static/locales/fi/common.json
+++ b/apps/web/public/static/locales/fi/common.json
@@ -871,6 +871,10 @@
   "create_team": "Luo tiimi",
   "name": "Nimi",
   "nameless_team": "Nimetön tiimi",
+  "oauth_clients": "OAuth-asiakkaat",
+  "oauth_clients_description": "Hallitse organisaatiosi OAuth-asiakkaita",
+  "create_oauth_client": "Luo OAuth-asiakas",
+  "create_oauth_client_description": "Luo uusi OAuth-asiakas kolmannen osapuolen integraatioita varten",
   "oauth_client_deletion_message": "OAuth-asiakas poistettu onnistuneesti",
   "create_new_team_description": "Luo uusi tiimi yhteistyötä varten",
   "create_new_team": "Luo uusi tiimi",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "Muokkaa tapahtumatyyppiä",
   "only_admin_can_see_members_of_org": "Tämä organisaatio on yksityinen, ja vain organisaation ylläpitäjä tai omistaja voi nähdä sen jäsenet",
   "only_admin_can_manage_sso_org": "Vain organisaation ylläpitäjä tai omistaja voi hallita SSO-asetuksia",
+  "only_admin_can_manage_directory_sync": "Vain organisaation järjestelmänvalvoja tai omistaja voi hallita hakemiston synkronointiasetuksia",
+  "only_admin_can_manage_oauth_clients": "Vain organisaation järjestelmänvalvoja tai omistaja voi hallita OAuth-asiakkaita",
   "collective_scheduling": "Yhteinen ajanvaraus",
   "make_it_easy_to_book": "Tee tiimisi varaaminen helpoksi, kun kaikki ovat käytettävissä",
   "find_the_best_person": "Löydä paras käytettävissä oleva henkilö ja kierrätä tiimisi läpi",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "Virhe roolin luomisessa",
   "error_updating_role": "Virhe roolin päivittämisessä",
   "pbac_desc_create_roles": "Luo rooleja",
+  "pbac_resource_attributes": "Attribuutit",
+  "pbac_desc_view_organization_attributes": "Näytä organisaation attribuutit",
+  "pbac_desc_update_organization_attributes": "Päivitä organisaation attribuutit",
+  "pbac_desc_delete_organization_attributes": "Poista organisaation attribuutit",
+  "pbac_desc_create_organization_attributes": "Luo organisaation attribuutit",
   "pbac_desc_view_roles": "Näytä roolit",
   "pbac_desc_update_roles": "Päivitä rooleja",
   "pbac_desc_delete_roles": "Poista rooleja",
-  "pbac_desc_manage_roles": "Kaikki toiminnot rooleille",
+  "pbac_desc_manage_roles": "Kaikki rooleihin liittyvät toiminnot organisaation tiimeissä",
   "pbac_desc_create_event_types": "Luo tapahtumatyyppejä",
   "pbac_desc_view_event_types": "Näytä tapahtumatyypit",
   "pbac_desc_update_event_types": "Päivitä tapahtumatyyppejä",
   "pbac_desc_delete_event_types": "Poista tapahtumatyyppejä",
-  "pbac_desc_manage_event_types": "Kaikki toiminnot tapahtumatyypeille",
+  "pbac_desc_manage_event_types": "Kaikki tapahtumatyyppeihin liittyvät toiminnot organisaation tiimeissä",
   "pbac_desc_create_teams": "Luo tiimejä",
   "pbac_desc_view_team_details": "Näytä tiimin tiedot",
   "pbac_desc_update_team_settings": "Päivitä tiimin asetuksia",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "Kutsu tiimin jäseniä",
   "pbac_desc_remove_team_members": "Poista tiimin jäseniä",
   "pbac_desc_change_team_member_role": "Muuta tiimin jäsenten roolia",
-  "pbac_desc_manage_teams": "Kaikki tiimeihin liittyvät toiminnot",
+  "pbac_desc_manage_teams": "Kaikki tiimeihin liittyvät toiminnot organisaation tiimeissä",
   "pbac_desc_create_organization": "Luo organisaatio",
   "pbac_desc_view_organization_details": "Näytä organisaation tiedot",
   "pbac_desc_list_organization_members": "Listaa organisaation jäsenet",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "Näytä organisaation varaukset",
   "pbac_desc_view_booking_recordings": "Näytä varausten tallenteet",
   "pbac_desc_update_bookings": "Päivitä varauksia",
-  "pbac_desc_manage_bookings": "Kaikki varauksiin liittyvät toiminnot",
+  "pbac_desc_manage_bookings": "Kaikki varauksiin liittyvät toiminnot organisaation tiimeissä",
   "pbac_desc_view_team_insights": "Näytä tiimin analytiikka",
   "pbac_desc_manage_team_insights": "Hallinnoi tiimin analytiikkaa",
   "read_permission_auto_enabled_tooltip": "Lukuoikeus otetaan automaattisesti käyttöön, kun luot, päivität tai poistat resurssin",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "Tätä linkkiä voi käyttää {{count}} varaukseen",
   "usage_based_generic_expiration_description": "Tämä linkki voidaan määrittää vanhentumaan tietyn varausmäärän jälkeen",
   "usage_based_expiration_description_plural": "Tätä linkkiä voi käyttää {{count}} varaukseen",
+  "booking_status": "Varauksen tila",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Lisää uudet merkkijonot tämän yläpuolelle ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
