--- a/apps/web/public/static/locales/fr/common.json
+++ b/apps/web/public/static/locales/fr/common.json
@@ -871,6 +871,10 @@
   "create_team": "Créer une équipe",
   "name": "Nom",
   "nameless_team": "Équipe sans nom",
+  "oauth_clients": "Clients OAuth",
+  "oauth_clients_description": "Gérer les clients OAuth pour votre organisation",
+  "create_oauth_client": "Créer un client OAuth",
+  "create_oauth_client_description": "Créer un nouveau client OAuth pour les intégrations tierces",
   "oauth_client_deletion_message": "Client OAuth supprimé avec succès",
   "create_new_team_description": "Créez une nouvelle équipe pour collaborer avec les utilisateurs.",
   "create_new_team": "Créer une nouvelle équipe",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "Modifier le type d'événement",
   "only_admin_can_see_members_of_org": "Cette organisation est privée et seuls son administrateur ou son propriétaire peuvent en voir les membres.",
   "only_admin_can_manage_sso_org": "Seuls l'administrateur ou le propriétaire de l'organisation peuvent gérer les paramètres SSO",
+  "only_admin_can_manage_directory_sync": "Seul l'administrateur ou le propriétaire de l'organisation peut gérer les paramètres de synchronisation d'annuaire",
+  "only_admin_can_manage_oauth_clients": "Seul l'administrateur ou le propriétaire de l'organisation peut gérer les clients OAuth",
   "collective_scheduling": "Planification collective",
   "make_it_easy_to_book": "Facilitez la réservation de votre équipe lorsque tout le monde est disponible.",
   "find_the_best_person": "Trouvez la meilleure personne disponible et alternez à travers votre équipe.",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "Erreur lors de la création du rôle",
   "error_updating_role": "Erreur lors de la mise à jour du rôle",
   "pbac_desc_create_roles": "Créer des rôles",
+  "pbac_resource_attributes": "Attributs",
+  "pbac_desc_view_organization_attributes": "Voir les attributs de l'organisation",
+  "pbac_desc_update_organization_attributes": "Mettre à jour les attributs de l'organisation",
+  "pbac_desc_delete_organization_attributes": "Supprimer les attributs de l'organisation",
+  "pbac_desc_create_organization_attributes": "Créer des attributs d'organisation",
   "pbac_desc_view_roles": "Voir les rôles",
   "pbac_desc_update_roles": "Mettre à jour les rôles",
   "pbac_desc_delete_roles": "Supprimer des rôles",
-  "pbac_desc_manage_roles": "Toutes les actions sur les rôles",
+  "pbac_desc_manage_roles": "Toutes les actions sur les rôles dans les équipes de l'organisation",
   "pbac_desc_create_event_types": "Créer des types d'événements",
   "pbac_desc_view_event_types": "Voir les types d'événements",
   "pbac_desc_update_event_types": "Mettre à jour les types d'événements",
   "pbac_desc_delete_event_types": "Supprimer des types d'événements",
-  "pbac_desc_manage_event_types": "Toutes les actions sur les types d'événements",
+  "pbac_desc_manage_event_types": "Toutes les actions sur les types d'événements dans les équipes de l'organisation",
   "pbac_desc_create_teams": "Créer des équipes",
   "pbac_desc_view_team_details": "Voir les détails de l'équipe",
   "pbac_desc_update_team_settings": "Mettre à jour les paramètres de l'équipe",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "Inviter des membres d'équipe",
   "pbac_desc_remove_team_members": "Supprimer des membres d'équipe",
   "pbac_desc_change_team_member_role": "Changer le rôle des membres de l'équipe",
-  "pbac_desc_manage_teams": "Toutes les actions sur les équipes",
+  "pbac_desc_manage_teams": "Toutes les actions sur les équipes dans l'organisation",
   "pbac_desc_create_organization": "Créer une organisation",
   "pbac_desc_view_organization_details": "Voir les détails de l'organisation",
   "pbac_desc_list_organization_members": "Lister les membres de l'organisation",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "Voir les réservations de l'organisation",
   "pbac_desc_view_booking_recordings": "Voir les enregistrements des réservations",
   "pbac_desc_update_bookings": "Mettre à jour les réservations",
-  "pbac_desc_manage_bookings": "Toutes les actions sur les réservations",
+  "pbac_desc_manage_bookings": "Toutes les actions sur les réservations dans les équipes de l'organisation",
   "pbac_desc_view_team_insights": "Voir les analyses de l'équipe",
   "pbac_desc_manage_team_insights": "Gérer les analyses de l'équipe",
   "read_permission_auto_enabled_tooltip": "L'autorisation de lecture est automatiquement activée lors de la création, la mise à jour ou la suppression d'une ressource",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "Ce lien peut être utilisé pour {{count}} réservation",
   "usage_based_generic_expiration_description": "Ce lien peut être configuré pour expirer après un nombre défini de réservations",
   "usage_based_expiration_description_plural": "Ce lien peut être utilisé pour {{count}} réservations",
+  "booking_status": "Statut de réservation",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Ajoutez vos nouvelles chaînes ci-dessus ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
