--- a/apps/web/public/static/locales/he/common.json
+++ b/apps/web/public/static/locales/he/common.json
@@ -871,6 +871,10 @@
   "create_team": "יצירת צוות",
   "name": "שם",
   "nameless_team": "צוות ללא שם",
+  "oauth_clients": "לקוחות OAuth",
+  "oauth_clients_description": "נהל לקוחות OAuth עבור הארגון שלך",
+  "create_oauth_client": "צור לקוח OAuth",
+  "create_oauth_client_description": "צור לקוח OAuth חדש לאינטגרציות צד שלישי",
   "oauth_client_deletion_message": "לקוח OAuth נמחק בהצלחה",
   "create_new_team_description": "צור צוות חדש כדי לשתף פעולה עם המשתמשים.",
   "create_new_team": "יצירת צוות חדש",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "עריכת סוג האירוע",
   "only_admin_can_see_members_of_org": "הארגון הזה פרטי ורק הנהלת ובעלי הארגון יכולים לצפות בחבריו.",
   "only_admin_can_manage_sso_org": "רק הנהלת או בעלי הארגון יכולים לנהל הגדרות SSO",
+  "only_admin_can_manage_directory_sync": "רק מנהל או בעל הארגון יכול לנהל הגדרות סנכרון ספריות",
+  "only_admin_can_manage_oauth_clients": "רק מנהל או בעל הארגון יכול לנהל לקוחות OAuth",
   "collective_scheduling": "תזמון שיתופי",
   "make_it_easy_to_book": "לקבוע בקלות פגישה עם חברי הצוות במועד שמתאים לכולם.",
   "find_the_best_person": "למצוא את האדם הכי מתאים שגם זמין לפגישה, ולעבור בסבב דרך כל חברי הצוות.",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "שגיאה ביצירת תפקיד",
   "error_updating_role": "שגיאה בעדכון תפקיד",
   "pbac_desc_create_roles": "יצירת תפקידים",
+  "pbac_resource_attributes": "מאפיינים",
+  "pbac_desc_view_organization_attributes": "צפה במאפייני הארגון",
+  "pbac_desc_update_organization_attributes": "עדכן מאפייני ארגון",
+  "pbac_desc_delete_organization_attributes": "מחק מאפייני ארגון",
+  "pbac_desc_create_organization_attributes": "צור מאפייני ארגון",
   "pbac_desc_view_roles": "צפייה בתפקידים",
   "pbac_desc_update_roles": "עדכון תפקידים",
   "pbac_desc_delete_roles": "מחיקת תפקידים",
-  "pbac_desc_manage_roles": "כל הפעולות על תפקידים",
+  "pbac_desc_manage_roles": "כל הפעולות על תפקידים בצוותי הארגון",
   "pbac_desc_create_event_types": "יצירת סוגי אירועים",
   "pbac_desc_view_event_types": "צפייה בסוגי אירועים",
   "pbac_desc_update_event_types": "עדכון סוגי אירועים",
   "pbac_desc_delete_event_types": "מחיקת סוגי אירועים",
-  "pbac_desc_manage_event_types": "כל הפעולות על סוגי אירועים",
+  "pbac_desc_manage_event_types": "כל הפעולות על סוגי אירועים בצוותי הארגון",
   "pbac_desc_create_teams": "יצירת צוותים",
   "pbac_desc_view_team_details": "צפייה בפרטי הצוות",
   "pbac_desc_update_team_settings": "עדכון הגדרות צוות",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "הזמנת חברי צוות",
   "pbac_desc_remove_team_members": "הסרת חברי צוות",
   "pbac_desc_change_team_member_role": "שינוי תפקיד של חברי צוות",
-  "pbac_desc_manage_teams": "כל הפעולות על צוותים",
+  "pbac_desc_manage_teams": "כל הפעולות על צוותים בארגון",
   "pbac_desc_create_organization": "יצירת ארגון",
   "pbac_desc_view_organization_details": "צפייה בפרטי הארגון",
   "pbac_desc_list_organization_members": "רשימת חברי הארגון",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "צפייה בהזמנות של הארגון",
   "pbac_desc_view_booking_recordings": "צפייה בהקלטות של הזמנות",
   "pbac_desc_update_bookings": "עדכון הזמנות",
-  "pbac_desc_manage_bookings": "כל הפעולות על הזמנות",
+  "pbac_desc_manage_bookings": "כל הפעולות על הזמנות בצוותי הארגון",
   "pbac_desc_view_team_insights": "צפייה בתובנות הצוות",
   "pbac_desc_manage_team_insights": "ניהול תובנות הצוות",
   "read_permission_auto_enabled_tooltip": "הרשאת קריאה מופעלת אוטומטית בעת יצירה, עדכון או מחיקה של משאב",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "ניתן להשתמש בקישור זה עבור הזמנה {{count}}",
   "usage_based_generic_expiration_description": "ניתן להגדיר שקישור זה יפוג לאחר מספר הזמנות מוגדר",
   "usage_based_expiration_description_plural": "ניתן להשתמש בקישור זה עבור {{count}} הזמנות",
+  "booking_status": "סטטוס הזמנה",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Add your new strings above here ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
