--- a/apps/web/public/static/locales/hu/common.json
+++ b/apps/web/public/static/locales/hu/common.json
@@ -871,6 +871,10 @@
   "create_team": "Csapat létrehozása",
   "name": "Név",
   "nameless_team": "Névtelen csapat",
+  "oauth_clients": "OAuth kliensek",
+  "oauth_clients_description": "Szervezeted OAuth klienseinek kezelése",
+  "create_oauth_client": "OAuth kliens létrehozása",
+  "create_oauth_client_description": "Új OAuth kliens létrehozása harmadik féltől származó integrációkhoz",
   "oauth_client_deletion_message": "OAuth kliens sikeresen törölve",
   "create_new_team_description": "Hozzon létre egy új csapatot a felhasználókkal való együttműködéshez.",
   "create_new_team": "Hozzon létre egy új csapatot",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "Eseménytípus szerkesztése",
   "only_admin_can_see_members_of_org": "Ez a szervezet privát, és csak a szervezet adminisztrátora vagy tulajdonosa láthatja a tagjait.",
   "only_admin_can_manage_sso_org": "Csak a szervezet rendszergazdája vagy tulajdonosa kezelheti az egyszeri bejelentkezési beállításokat",
+  "only_admin_can_manage_directory_sync": "Csak a szervezet adminisztrátora vagy tulajdonosa kezelheti a könyvtár-szinkronizálási beállításokat",
+  "only_admin_can_manage_oauth_clients": "Csak a szervezet adminisztrátora vagy tulajdonosa kezelheti az OAuth klienseket",
   "collective_scheduling": "Kollektív ütemezés",
   "make_it_easy_to_book": "Könnyítse meg a csapata lefoglalását, amikor mindenki elérhető.",
   "find_the_best_person": "Keresse meg az elérhető legjobb embert, és menjen sorba a csapaton.",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "Hiba történt a szerepkör létrehozásakor",
   "error_updating_role": "Hiba történt a szerepkör frissítésekor",
   "pbac_desc_create_roles": "Szerepkörök létrehozása",
+  "pbac_resource_attributes": "Attribútumok",
+  "pbac_desc_view_organization_attributes": "Szervezeti attribútumok megtekintése",
+  "pbac_desc_update_organization_attributes": "Szervezeti attribútumok frissítése",
+  "pbac_desc_delete_organization_attributes": "Szervezeti attribútumok törlése",
+  "pbac_desc_create_organization_attributes": "Szervezeti attribútumok létrehozása",
   "pbac_desc_view_roles": "Szerepkörök megtekintése",
   "pbac_desc_update_roles": "Szerepkörök frissítése",
   "pbac_desc_delete_roles": "Szerepkörök törlése",
-  "pbac_desc_manage_roles": "Minden művelet a szerepkörökön",
+  "pbac_desc_manage_roles": "Minden szerepkörrel kapcsolatos művelet a szervezeti csapatokon belül",
   "pbac_desc_create_event_types": "Eseménytípusok létrehozása",
   "pbac_desc_view_event_types": "Eseménytípusok megtekintése",
   "pbac_desc_update_event_types": "Eseménytípusok frissítése",
   "pbac_desc_delete_event_types": "Eseménytípusok törlése",
-  "pbac_desc_manage_event_types": "Minden művelet az eseménytípusokon",
+  "pbac_desc_manage_event_types": "Minden eseménytípussal kapcsolatos művelet a szervezeti csapatokon belül",
   "pbac_desc_create_teams": "Csapatok létrehozása",
   "pbac_desc_view_team_details": "Csapat részleteinek megtekintése",
   "pbac_desc_update_team_settings": "Csapat beállításainak frissítése",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "Csapattagok meghívása",
   "pbac_desc_remove_team_members": "Csapattagok eltávolítása",
   "pbac_desc_change_team_member_role": "Csapattagok szerepkörének módosítása",
-  "pbac_desc_manage_teams": "Minden művelet a csapatokon",
+  "pbac_desc_manage_teams": "Minden csapattal kapcsolatos művelet a szervezeti csapatokon belül",
   "pbac_desc_create_organization": "Szervezet létrehozása",
   "pbac_desc_view_organization_details": "Szervezeti adatok megtekintése",
   "pbac_desc_list_organization_members": "Szervezeti tagok listázása",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "Szervezeti foglalások megtekintése",
   "pbac_desc_view_booking_recordings": "Foglalási felvételek megtekintése",
   "pbac_desc_update_bookings": "Foglalások frissítése",
-  "pbac_desc_manage_bookings": "Minden művelet a foglalásokon",
+  "pbac_desc_manage_bookings": "Minden foglalással kapcsolatos művelet a szervezeti csapatokon belül",
   "pbac_desc_view_team_insights": "Csapat elemzéseinek megtekintése",
   "pbac_desc_manage_team_insights": "Csapat elemzéseinek kezelése",
   "read_permission_auto_enabled_tooltip": "Az olvasási jogosultság automatikusan engedélyezve van erőforrás létrehozásakor, frissítésekor vagy törlésekor",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "Ez a link {{count}} foglaláshoz használható",
   "usage_based_generic_expiration_description": "Ez a link beállítható úgy, hogy egy meghatározott számú foglalás után lejárjon",
   "usage_based_expiration_description_plural": "Ez a link {{count}} foglaláshoz használható",
+  "booking_status": "Foglalás állapota",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Adja hozzá az új karakterláncokat fent ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
