--- a/apps/web/public/static/locales/it/common.json
+++ b/apps/web/public/static/locales/it/common.json
@@ -871,6 +871,10 @@
   "create_team": "Crea Team",
   "name": "Nome",
   "nameless_team": "Team senza nome",
+  "oauth_clients": "Client OAuth",
+  "oauth_clients_description": "Gestisci i client OAuth per la tua organizzazione",
+  "create_oauth_client": "Crea client OAuth",
+  "create_oauth_client_description": "Crea un nuovo client OAuth per integrazioni di terze parti",
   "oauth_client_deletion_message": "Client OAuth eliminato con successo",
   "create_new_team_description": "Crea un nuovo team per collaborare con gli utenti.",
   "create_new_team": "Crea un nuovo team",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "Modifica tipo di evento",
   "only_admin_can_see_members_of_org": "Questa organizzazione è privata e solo l'amministratore o il proprietario dell'organizzazione può visualizzare i suoi membri.",
   "only_admin_can_manage_sso_org": "Solo l'amministratore o il proprietario dell'organizzazione può gestire le impostazioni SSO",
+  "only_admin_can_manage_directory_sync": "Solo l'amministratore o il proprietario dell'organizzazione può gestire le impostazioni di sincronizzazione della directory",
+  "only_admin_can_manage_oauth_clients": "Solo l'amministratore o il proprietario dell'organizzazione può gestire i client OAuth",
   "collective_scheduling": "Pianificazione collettiva",
   "make_it_easy_to_book": "Facilita la prenotazione del tuo team quando tutti sono disponibili.",
   "find_the_best_person": "Trova la persona più adatta disponibile e fai ruotare i membri del team.",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "Errore durante la creazione del ruolo",
   "error_updating_role": "Errore durante l'aggiornamento del ruolo",
   "pbac_desc_create_roles": "Crea ruoli",
+  "pbac_resource_attributes": "Attributi",
+  "pbac_desc_view_organization_attributes": "Visualizza attributi dell'organizzazione",
+  "pbac_desc_update_organization_attributes": "Aggiorna attributi dell'organizzazione",
+  "pbac_desc_delete_organization_attributes": "Elimina attributi dell'organizzazione",
+  "pbac_desc_create_organization_attributes": "Crea attributi dell'organizzazione",
   "pbac_desc_view_roles": "Visualizza ruoli",
   "pbac_desc_update_roles": "Aggiorna ruoli",
   "pbac_desc_delete_roles": "Elimina ruoli",
-  "pbac_desc_manage_roles": "Tutte le azioni sui ruoli",
+  "pbac_desc_manage_roles": "Tutte le azioni sui ruoli nei team dell'organizzazione",
   "pbac_desc_create_event_types": "Crea tipi di evento",
   "pbac_desc_view_event_types": "Visualizza tipi di evento",
   "pbac_desc_update_event_types": "Aggiorna tipi di evento",
   "pbac_desc_delete_event_types": "Elimina tipi di evento",
-  "pbac_desc_manage_event_types": "Tutte le azioni sui tipi di evento",
+  "pbac_desc_manage_event_types": "Tutte le azioni sui tipi di evento nei team dell'organizzazione",
   "pbac_desc_create_teams": "Crea team",
   "pbac_desc_view_team_details": "Visualizza dettagli del team",
   "pbac_desc_update_team_settings": "Aggiorna impostazioni del team",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "Invita membri del team",
   "pbac_desc_remove_team_members": "Rimuovi membri del team",
   "pbac_desc_change_team_member_role": "Cambia ruolo dei membri del team",
-  "pbac_desc_manage_teams": "Tutte le azioni sui team",
+  "pbac_desc_manage_teams": "Tutte le azioni sui team dell'organizzazione",
   "pbac_desc_create_organization": "Crea organizzazione",
   "pbac_desc_view_organization_details": "Visualizza dettagli dell'organizzazione",
   "pbac_desc_list_organization_members": "Elenca membri dell'organizzazione",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "Visualizza prenotazioni dell'organizzazione",
   "pbac_desc_view_booking_recordings": "Visualizza registrazioni delle prenotazioni",
   "pbac_desc_update_bookings": "Aggiorna prenotazioni",
-  "pbac_desc_manage_bookings": "Tutte le azioni sulle prenotazioni",
+  "pbac_desc_manage_bookings": "Tutte le azioni sulle prenotazioni nei team dell'organizzazione",
   "pbac_desc_view_team_insights": "Visualizza insight del team",
   "pbac_desc_manage_team_insights": "Gestisci insight del team",
   "read_permission_auto_enabled_tooltip": "Il permesso di lettura viene abilitato automaticamente quando si crea, aggiorna o elimina una risorsa",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "Questo link può essere utilizzato per {{count}} prenotazione",
   "usage_based_generic_expiration_description": "Questo link può essere configurato per scadere dopo un numero stabilito di prenotazioni",
   "usage_based_expiration_description_plural": "Questo link può essere utilizzato per {{count}} prenotazioni",
+  "booking_status": "Stato della prenotazione",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Aggiungi le tue nuove stringhe qui sopra ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
