--- a/apps/web/public/static/locales/ja/common.json
+++ b/apps/web/public/static/locales/ja/common.json
@@ -871,6 +871,10 @@
   "create_team": "チームを作成",
   "name": "名前",
   "nameless_team": "名称未設定のチーム",
+  "oauth_clients": "OAuth クライアント",
+  "oauth_clients_description": "組織のOAuthクライアントを管理する",
+  "create_oauth_client": "OAuth クライアントを作成",
+  "create_oauth_client_description": "サードパーティ連携用の新しいOAuthクライアントを作成する",
   "oauth_client_deletion_message": "OAuthクライアントが正常に削除されました",
   "create_new_team_description": "ユーザーとコラボレーションできる新しいチームを作成します。",
   "create_new_team": "新しいチームを作成",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "イベントの種類を編集",
   "only_admin_can_see_members_of_org": "この組織は非公開であり、組織の管理者または所有者のみがメンバーを表示できます。",
   "only_admin_can_manage_sso_org": "組織の管理者または所有者のみがSSO設定を管理できます。",
+  "only_admin_can_manage_directory_sync": "組織の管理者またはオーナーのみがディレクトリ同期設定を管理できます",
+  "only_admin_can_manage_oauth_clients": "組織の管理者またはオーナーのみがOAuthクライアントを管理できます",
   "collective_scheduling": "一括スケジューリング",
   "make_it_easy_to_book": "全員が参加可能な場合に、チームの予約を簡単にできるようにします。",
   "find_the_best_person": "割り当てが可能な最適なユーザーを見つけて、チームで順番に分担します。",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "役割の作成中にエラーが発生しました",
   "error_updating_role": "役割の更新中にエラーが発生しました",
   "pbac_desc_create_roles": "役割を作成する",
+  "pbac_resource_attributes": "属性",
+  "pbac_desc_view_organization_attributes": "組織の属性を表示する",
+  "pbac_desc_update_organization_attributes": "組織の属性を更新する",
+  "pbac_desc_delete_organization_attributes": "組織の属性を削除する",
+  "pbac_desc_create_organization_attributes": "組織の属性を作成する",
   "pbac_desc_view_roles": "役割を表示する",
   "pbac_desc_update_roles": "役割を更新する",
   "pbac_desc_delete_roles": "役割を削除する",
-  "pbac_desc_manage_roles": "役割に関するすべての操作",
+  "pbac_desc_manage_roles": "組織チーム全体でのロールに対するすべてのアクション",
   "pbac_desc_create_event_types": "イベントタイプを作成する",
   "pbac_desc_view_event_types": "イベントタイプを表示する",
   "pbac_desc_update_event_types": "イベントタイプを更新する",
   "pbac_desc_delete_event_types": "イベントタイプを削除する",
-  "pbac_desc_manage_event_types": "イベントタイプに関するすべての操作",
+  "pbac_desc_manage_event_types": "組織チーム全体でのイベントタイプに対するすべてのアクション",
   "pbac_desc_create_teams": "チームを作成する",
   "pbac_desc_view_team_details": "チームの詳細を表示する",
   "pbac_desc_update_team_settings": "チーム設定を更新する",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "チームメンバーを招待する",
   "pbac_desc_remove_team_members": "チームメンバーを削除する",
   "pbac_desc_change_team_member_role": "チームメンバーの役割を変更する",
-  "pbac_desc_manage_teams": "チームに関するすべてのアクション",
+  "pbac_desc_manage_teams": "組織チーム全体でのチームに対するすべてのアクション",
   "pbac_desc_create_organization": "組織の作成",
   "pbac_desc_view_organization_details": "組織の詳細を表示",
   "pbac_desc_list_organization_members": "組織メンバーの一覧表示",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "組織予約の表示",
   "pbac_desc_view_booking_recordings": "予約の録画を表示",
   "pbac_desc_update_bookings": "予約の更新",
-  "pbac_desc_manage_bookings": "予約に関するすべてのアクション",
+  "pbac_desc_manage_bookings": "組織チーム全体での予約に対するすべてのアクション",
   "pbac_desc_view_team_insights": "チームインサイトの表示",
   "pbac_desc_manage_team_insights": "チームインサイトの管理",
   "read_permission_auto_enabled_tooltip": "リソースの作成、更新、削除時に読み取り権限は自動的に有効になります",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "このリンクは{{count}}回の予約に使用できます",
   "usage_based_generic_expiration_description": "このリンクは設定した予約回数後に有効期限が切れるよう構成できます",
   "usage_based_expiration_description_plural": "このリンクは{{count}}回の予約に使用できます",
+  "booking_status": "予約状況",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ この上に新しい文字列を追加してください ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
