--- a/apps/web/public/static/locales/km/common.json
+++ b/apps/web/public/static/locales/km/common.json
@@ -871,6 +871,10 @@
   "create_team": "បង្កើតក្រុម",
   "name": "ឈ្មោះ",
   "nameless_team": "ក្រុមគ្មានឈ្មោះ",
+  "oauth_clients": "ម៉ាស៊ីនភ្ញៀវ OAuth",
+  "oauth_clients_description": "គ្រប់គ្រងម៉ាស៊ីនភ្ញៀវ OAuth សម្រាប់អង្គភាពរបស់អ្នក",
+  "create_oauth_client": "បង្កើតម៉ាស៊ីនភ្ញៀវ OAuth",
+  "create_oauth_client_description": "បង្កើតម៉ាស៊ីនភ្ញៀវ OAuth ថ្មីសម្រាប់ការតភ្ជាប់ជាមួយកម្មវិធីភាគីទីបី",
   "oauth_client_deletion_message": "បានលុប OAuth client ដោយជោគជ័យ",
   "create_new_team_description": "បង្កើតក្រុមថ្មីដើម្បីសហការជាមួយអ្នកប្រើប្រាស់ផ្សេងទៀត។",
   "create_new_team": "បង្កើតក្រុមថ្មី",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "កែសម្រួលប្រភេទព្រឹត្តិការណ៍",
   "only_admin_can_see_members_of_org": "អង្គការនេះគឺឯកជន ហើយមានតែអ្នកគ្រប់គ្រងឬម្ចាស់អង្គការទេដែលអាចមើលសមាជិករបស់វាបាន។",
   "only_admin_can_manage_sso_org": "មានតែអ្នកគ្រប់គ្រងឬម្ចាស់អង្គការទេដែលអាចគ្រប់គ្រងការកំណត់ SSO",
+  "only_admin_can_manage_directory_sync": "មានតែអ្នកគ្រប់គ្រងឬម្ចាស់អង្គភាពប៉ុណ្ណោះដែលអាចគ្រប់គ្រងការកំណត់ធ្វើសមកាលកម្មថត",
+  "only_admin_can_manage_oauth_clients": "មានតែអ្នកគ្រប់គ្រងឬម្ចាស់អង្គភាពប៉ុណ្ណោះដែលអាចគ្រប់គ្រងម៉ាស៊ីនភ្ញៀវ OAuth",
   "collective_scheduling": "ការកំណត់ពេលវេលារួម",
   "make_it_easy_to_book": "ធ្វើឱ្យវាងាយស្រួលក្នុងការកក់ក្រុមរបស់អ្នកនៅពេលដែលគ្រប់គ្នាមាន។",
   "find_the_best_person": "ស្វែងរកមនុស្សល្អបំផុតដែលមាន និងវេនតាមក្រុមរបស់អ្នក។",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "មានបញ្ហាក្នុងការបង្កើតតួនាទី",
   "error_updating_role": "មានបញ្ហាក្នុងការធ្វើបច្ចុប្បន្នភាពតួនាទី",
   "pbac_desc_create_roles": "បង្កើតតួនាទី",
+  "pbac_resource_attributes": "គុណលក្ខណៈ",
+  "pbac_desc_view_organization_attributes": "មើលគុណលក្ខណៈអង្គភាព",
+  "pbac_desc_update_organization_attributes": "ធ្វើបច្ចុប្បន្នភាពគុណលក្ខណៈអង្គភាព",
+  "pbac_desc_delete_organization_attributes": "លុបគុណលក្ខណៈអង្គភាព",
+  "pbac_desc_create_organization_attributes": "បង្កើតគុណលក្ខណៈអង្គភាព",
   "pbac_desc_view_roles": "មើលតួនាទី",
   "pbac_desc_update_roles": "ធ្វើបច្ចុប្បន្នភាពតួនាទី",
   "pbac_desc_delete_roles": "លុបតួនាទី",
-  "pbac_desc_manage_roles": "សកម្មភាពទាំងអស់លើតួនាទី",
+  "pbac_desc_manage_roles": "សកម្មភាពទាំងអស់លើតួនាទីក្នុងក្រុមអង្គភាព",
   "pbac_desc_create_event_types": "បង្កើតប្រភេទព្រឹត្តិការណ៍",
   "pbac_desc_view_event_types": "មើលប្រភេទព្រឹត្តិការណ៍",
   "pbac_desc_update_event_types": "ធ្វើបច្ចុប្បន្នភាពប្រភេទព្រឹត្តិការណ៍",
   "pbac_desc_delete_event_types": "លុបប្រភេទព្រឹត្តិការណ៍",
-  "pbac_desc_manage_event_types": "សកម្មភាពទាំងអស់លើប្រភេទព្រឹត្តិការណ៍",
+  "pbac_desc_manage_event_types": "សកម្មភាពទាំងអស់លើប្រភេទព្រឹត្តិការណ៍ក្នុងក្រុមអង្គភាព",
   "pbac_desc_create_teams": "បង្កើតក្រុម",
   "pbac_desc_view_team_details": "មើលព័ត៌មានលម្អិតរបស់ក្រុម",
   "pbac_desc_update_team_settings": "ធ្វើបច្ចុប្បន្នភាពការកំណត់ក្រុម",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "អញ្ជើញសមាជិកក្រុម",
   "pbac_desc_remove_team_members": "ដកសមាជិកក្រុមចេញ",
   "pbac_desc_change_team_member_role": "ផ្លាស់ប្តូរតួនាទីរបស់សមាជិកក្រុម",
-  "pbac_desc_manage_teams": "សកម្មភាពទាំងអស់លើក្រុម",
+  "pbac_desc_manage_teams": "សកម្មភាពទាំងអស់លើក្រុមក្នុងក្រុមអង្គភាព",
   "pbac_desc_create_organization": "បង្កើតអង្គការ",
   "pbac_desc_view_organization_details": "មើលព័ត៌មានលម្អិតអំពីអង្គការ",
   "pbac_desc_list_organization_members": "បញ្ជីសមាជិកអង្គការ",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "មើលការកក់របស់អង្គការ",
   "pbac_desc_view_booking_recordings": "មើលការថតការកក់",
   "pbac_desc_update_bookings": "ធ្វើបច្ចុប្បន្នភាពការកក់",
-  "pbac_desc_manage_bookings": "សកម្មភាពទាំងអស់លើការកក់",
+  "pbac_desc_manage_bookings": "សកម្មភាពទាំងអស់លើការកក់ក្នុងក្រុមអង្គភាព",
   "pbac_desc_view_team_insights": "មើលការយល់ដឹងរបស់ក្រុម",
   "pbac_desc_manage_team_insights": "គ្រប់គ្រងការយល់ដឹងរបស់ក្រុម",
   "read_permission_auto_enabled_tooltip": "សិទ្ធិអានត្រូវបានបើកដោយស្វ័យប្រវត្តិនៅពេលបង្កើត ធ្វើបច្ចុប្បន្នភាព ឬលុបធនធាន",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "តំណនេះអាចត្រូវបានប្រើប្រាស់សម្រាប់ការកក់ចំនួន {{count}} ដង",
   "usage_based_generic_expiration_description": "តំណនេះអាចត្រូវបានកំណត់ឱ្យផុតកំណត់បន្ទាប់ពីចំនួនការកក់ដែលបានកំណត់",
   "usage_based_expiration_description_plural": "តំណនេះអាចត្រូវបានប្រើប្រាស់សម្រាប់ការកក់ចំនួន {{count}} ដង",
+  "booking_status": "ស្ថានភាពនៃការកក់",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ បន្ថែមខ្សែអក្សរថ្មីរបស់អ្នកនៅខាងលើនេះ ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
