--- a/apps/web/public/static/locales/ko/common.json
+++ b/apps/web/public/static/locales/ko/common.json
@@ -871,6 +871,10 @@
   "create_team": "팀 만들기",
   "name": "이름",
   "nameless_team": "이름 없는 팀",
+  "oauth_clients": "OAuth 클라이언트",
+  "oauth_clients_description": "조직의 OAuth 클라이언트 관리",
+  "create_oauth_client": "OAuth 클라이언트 생성",
+  "create_oauth_client_description": "서드파티 통합을 위한 새 OAuth 클라이언트 생성",
   "oauth_client_deletion_message": "OAuth 클라이언트가 성공적으로 삭제되었습니다",
   "create_new_team_description": "사용자와 공동 작업할 새 팀을 만듭니다.",
   "create_new_team": "새 팀 만들기",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "이벤트 타입 편집",
   "only_admin_can_see_members_of_org": "이 조직은 비공개이며, 조직의 관리자나 소유자만 구성원을 볼 수 있습니다.",
   "only_admin_can_manage_sso_org": "조직의 관리자나 소유자만 SSO 설정을 관리할 수 있습니다.",
+  "only_admin_can_manage_directory_sync": "조직의 관리자 또는 소유자만 디렉토리 동기화 설정을 관리할 수 있습니다",
+  "only_admin_can_manage_oauth_clients": "조직의 관리자 또는 소유자만 OAuth 클라이언트를 관리할 수 있습니다",
   "collective_scheduling": "집단 일정 관리",
   "make_it_easy_to_book": "모든 사람이 참석할 수 있을 때 팀을 쉽게 예약할 수 있게 합니다.",
   "find_the_best_person": "가능한 최상의 인원을 찾고 팀원을 차례대로 배정합니다.",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "역할 생성 오류",
   "error_updating_role": "역할 업데이트 오류",
   "pbac_desc_create_roles": "역할 생성",
+  "pbac_resource_attributes": "속성",
+  "pbac_desc_view_organization_attributes": "조직 속성 보기",
+  "pbac_desc_update_organization_attributes": "조직 속성 업데이트",
+  "pbac_desc_delete_organization_attributes": "조직 속성 삭제",
+  "pbac_desc_create_organization_attributes": "조직 속성 생성",
   "pbac_desc_view_roles": "역할 보기",
   "pbac_desc_update_roles": "역할 업데이트",
   "pbac_desc_delete_roles": "역할 삭제",
-  "pbac_desc_manage_roles": "역할에 대한 모든 작업",
+  "pbac_desc_manage_roles": "조직 팀 전체의 역할에 대한 모든 작업",
   "pbac_desc_create_event_types": "이벤트 타입 생성",
   "pbac_desc_view_event_types": "이벤트 타입 보기",
   "pbac_desc_update_event_types": "이벤트 타입 업데이트",
   "pbac_desc_delete_event_types": "이벤트 타입 삭제",
-  "pbac_desc_manage_event_types": "이벤트 타입에 대한 모든 작업",
+  "pbac_desc_manage_event_types": "조직 팀 전체의 이벤트 유형에 대한 모든 작업",
   "pbac_desc_create_teams": "팀 생성",
   "pbac_desc_view_team_details": "팀 세부 정보 보기",
   "pbac_desc_update_team_settings": "팀 설정 업데이트",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "팀원 초대",
   "pbac_desc_remove_team_members": "팀원 제거",
   "pbac_desc_change_team_member_role": "팀원 역할 변경",
-  "pbac_desc_manage_teams": "팀에 대한 모든 작업",
+  "pbac_desc_manage_teams": "조직 팀 전체의 팀에 대한 모든 작업",
   "pbac_desc_create_organization": "조직 생성",
   "pbac_desc_view_organization_details": "조직 세부 정보 보기",
   "pbac_desc_list_organization_members": "조직 구성원 목록 보기",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "조직 예약 보기",
   "pbac_desc_view_booking_recordings": "예약 녹화 보기",
   "pbac_desc_update_bookings": "예약 업데이트",
-  "pbac_desc_manage_bookings": "예약에 대한 모든 작업",
+  "pbac_desc_manage_bookings": "조직 팀 전체의 예약에 대한 모든 작업",
   "pbac_desc_view_team_insights": "팀 인사이트 보기",
   "pbac_desc_manage_team_insights": "팀 인사이트 관리",
   "read_permission_auto_enabled_tooltip": "리소스를 생성, 업데이트 또는 삭제할 때 읽기 권한이 자동으로 활성화됩니다",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "이 링크는 {{count}}회 예약에 사용할 수 있습니다",
   "usage_based_generic_expiration_description": "이 링크는 설정된 예약 횟수 이후에 만료되도록 구성할 수 있습니다",
   "usage_based_expiration_description_plural": "이 링크는 {{count}}회 예약에 사용할 수 있습니다",
+  "booking_status": "예약 상태",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ 여기에 새 문자열을 추가하세요 ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
