--- a/apps/web/public/static/locales/nl/common.json
+++ b/apps/web/public/static/locales/nl/common.json
@@ -871,6 +871,10 @@
   "create_team": "Maak Team",
   "name": "Naam",
   "nameless_team": "Naamloos team",
+  "oauth_clients": "OAuth-clients",
+  "oauth_clients_description": "Beheer OAuth-clients voor je organisatie",
+  "create_oauth_client": "OAuth-client aanmaken",
+  "create_oauth_client_description": "Maak een nieuwe OAuth-client voor integraties met derden",
   "oauth_client_deletion_message": "OAuth-client succesvol verwijderd",
   "create_new_team_description": "Maak een nieuw team aan om met andere gebruikers samen te werken.",
   "create_new_team": "Nieuw team aanmaken",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "Gebeurtenistype bewerken",
   "only_admin_can_see_members_of_org": "Deze organisatie is privé, en alleen de beheerder of eigenaar van de organisatie kan de leden zien.",
   "only_admin_can_manage_sso_org": "Alleen de beheerder of eigenaar van de organisatie kan SSO-instellingen beheren",
+  "only_admin_can_manage_directory_sync": "Alleen de beheerder of eigenaar van de organisatie kan directory sync-instellingen beheren",
+  "only_admin_can_manage_oauth_clients": "Alleen de beheerder of eigenaar van de organisatie kan OAuth-clients beheren",
   "collective_scheduling": "Collectieve planning",
   "make_it_easy_to_book": "Maak het gemakkelijk om uw team te boeken wanneer iedereen beschikbaar is.",
   "find_the_best_person": "Zoek de beste beschikbare persoon en blader door uw team.",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "Fout bij het aanmaken van rol",
   "error_updating_role": "Fout bij het bijwerken van rol",
   "pbac_desc_create_roles": "Rollen aanmaken",
+  "pbac_resource_attributes": "Attributen",
+  "pbac_desc_view_organization_attributes": "Organisatieattributen bekijken",
+  "pbac_desc_update_organization_attributes": "Organisatieattributen bijwerken",
+  "pbac_desc_delete_organization_attributes": "Organisatieattributen verwijderen",
+  "pbac_desc_create_organization_attributes": "Organisatieattributen aanmaken",
   "pbac_desc_view_roles": "Rollen bekijken",
   "pbac_desc_update_roles": "Rollen bijwerken",
   "pbac_desc_delete_roles": "Rollen verwijderen",
-  "pbac_desc_manage_roles": "Alle acties op rollen",
+  "pbac_desc_manage_roles": "Alle acties op rollen binnen organisatieteams",
   "pbac_desc_create_event_types": "Gebeurtenistypes aanmaken",
   "pbac_desc_view_event_types": "Gebeurtenistypes bekijken",
   "pbac_desc_update_event_types": "Gebeurtenistypes bijwerken",
   "pbac_desc_delete_event_types": "Gebeurtenistypes verwijderen",
-  "pbac_desc_manage_event_types": "Alle acties op gebeurtenistypes",
+  "pbac_desc_manage_event_types": "Alle acties op evenementtypes binnen organisatieteams",
   "pbac_desc_create_teams": "Teams aanmaken",
   "pbac_desc_view_team_details": "Teamdetails bekijken",
   "pbac_desc_update_team_settings": "Teaminstellingen bijwerken",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "Teamleden uitnodigen",
   "pbac_desc_remove_team_members": "Teamleden verwijderen",
   "pbac_desc_change_team_member_role": "Rol van teamleden wijzigen",
-  "pbac_desc_manage_teams": "Alle acties op teams",
+  "pbac_desc_manage_teams": "Alle acties op teams binnen organisatieteams",
   "pbac_desc_create_organization": "Organisatie aanmaken",
   "pbac_desc_view_organization_details": "Organisatiedetails bekijken",
   "pbac_desc_list_organization_members": "Organisatieleden weergeven",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "Organisatieboekingen bekijken",
   "pbac_desc_view_booking_recordings": "Boekingsopnames bekijken",
   "pbac_desc_update_bookings": "Boekingen bijwerken",
-  "pbac_desc_manage_bookings": "Alle acties op boekingen",
+  "pbac_desc_manage_bookings": "Alle acties op boekingen binnen organisatieteams",
   "pbac_desc_view_team_insights": "Team-inzichten bekijken",
   "pbac_desc_manage_team_insights": "Team-inzichten beheren",
   "read_permission_auto_enabled_tooltip": "Leesrechten worden automatisch ingeschakeld bij het aanmaken, bijwerken of verwijderen van een resource",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "Deze link kan worden gebruikt voor {{count}} boeking",
   "usage_based_generic_expiration_description": "Deze link kan worden ingesteld om te verlopen na een bepaald aantal boekingen",
   "usage_based_expiration_description_plural": "Deze link kan worden gebruikt voor {{count}} boekingen",
+  "booking_status": "Boekingsstatus",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Voeg uw nieuwe strings hierboven toe ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
