--- a/apps/web/public/static/locales/no/common.json
+++ b/apps/web/public/static/locales/no/common.json
@@ -871,6 +871,10 @@
   "create_team": "Opprett team",
   "name": "Navn",
   "nameless_team": "Navnløst team",
+  "oauth_clients": "OAuth-klienter",
+  "oauth_clients_description": "Administrer OAuth-klienter for organisasjonen din",
+  "create_oauth_client": "Opprett OAuth-klient",
+  "create_oauth_client_description": "Opprett en ny OAuth-klient for tredjepartsintegrasjoner",
   "oauth_client_deletion_message": "OAuth-klient ble slettet",
   "create_new_team_description": "Opprett et nytt team for å samarbeide med brukere.",
   "create_new_team": "Opprett et nytt team",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "Rediger hendelsestype",
   "only_admin_can_see_members_of_org": "Denne organisasjonen er privat, og kun organisasjonens administrator eller eier kan se medlemmene.",
   "only_admin_can_manage_sso_org": "Kun organisasjonens administrator eller eier kan administrere SSO-innstillinger",
+  "only_admin_can_manage_directory_sync": "Bare organisasjonens administrator eller eier kan administrere innstillinger for katalogsynkronisering",
+  "only_admin_can_manage_oauth_clients": "Bare organisasjonens administrator eller eier kan administrere OAuth-klienter",
   "collective_scheduling": "Kollektiv planlegging av tidspunkt",
   "make_it_easy_to_book": "Gjør det enkelt å booke teamet ditt når alle er tilgjengelige.",
   "find_the_best_person": "Finn den beste personen tilgjengelig og bla gjennom teamet ditt.",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "Feil ved oppretting av rolle",
   "error_updating_role": "Feil ved oppdatering av rolle",
   "pbac_desc_create_roles": "Opprett roller",
+  "pbac_resource_attributes": "Egenskaper",
+  "pbac_desc_view_organization_attributes": "Vis organisasjonsegenskaper",
+  "pbac_desc_update_organization_attributes": "Oppdater organisasjonsegenskaper",
+  "pbac_desc_delete_organization_attributes": "Slett organisasjonsegenskaper",
+  "pbac_desc_create_organization_attributes": "Opprett organisasjonsegenskaper",
   "pbac_desc_view_roles": "Vis roller",
   "pbac_desc_update_roles": "Oppdater roller",
   "pbac_desc_delete_roles": "Slett roller",
-  "pbac_desc_manage_roles": "Alle handlinger for roller",
+  "pbac_desc_manage_roles": "Alle handlinger på roller på tvers av organisasjonsteam",
   "pbac_desc_create_event_types": "Opprett hendelsestyper",
   "pbac_desc_view_event_types": "Vis hendelsestyper",
   "pbac_desc_update_event_types": "Oppdater hendelsestyper",
   "pbac_desc_delete_event_types": "Slett hendelsestyper",
-  "pbac_desc_manage_event_types": "Alle handlinger for hendelsestyper",
+  "pbac_desc_manage_event_types": "Alle handlinger på hendelsestyper på tvers av organisasjonsteam",
   "pbac_desc_create_teams": "Opprett team",
   "pbac_desc_view_team_details": "Vis teamdetaljer",
   "pbac_desc_update_team_settings": "Oppdater teaminnstillinger",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "Inviter teammedlemmer",
   "pbac_desc_remove_team_members": "Fjern teammedlemmer",
   "pbac_desc_change_team_member_role": "Endre rolle for teammedlemmer",
-  "pbac_desc_manage_teams": "Alle handlinger på team",
+  "pbac_desc_manage_teams": "Alle handlinger på team på tvers av organisasjonsteam",
   "pbac_desc_create_organization": "Opprett organisasjon",
   "pbac_desc_view_organization_details": "Se organisasjonsdetaljer",
   "pbac_desc_list_organization_members": "Liste organisasjonsmedlemmer",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "Se organisasjonsbookinger",
   "pbac_desc_view_booking_recordings": "Se bookingopptak",
   "pbac_desc_update_bookings": "Oppdater bookinger",
-  "pbac_desc_manage_bookings": "Alle handlinger på bookinger",
+  "pbac_desc_manage_bookings": "Alle handlinger på bestillinger på tvers av organisasjonsteam",
   "pbac_desc_view_team_insights": "Se teaminnsikt",
   "pbac_desc_manage_team_insights": "Administrer teaminnsikt",
   "read_permission_auto_enabled_tooltip": "Lesetillatelse aktiveres automatisk ved opprettelse, oppdatering eller sletting av en ressurs",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "Denne lenken kan brukes for {{count}} bestilling",
   "usage_based_generic_expiration_description": "Denne lenken kan konfigureres til å utløpe etter et bestemt antall bestillinger",
   "usage_based_expiration_description_plural": "Denne lenken kan brukes for {{count}} bestillinger",
+  "booking_status": "Bestillingsstatus",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Legg til dine nye strenger over her ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
