--- a/apps/web/public/static/locales/pl/common.json
+++ b/apps/web/public/static/locales/pl/common.json
@@ -871,6 +871,10 @@
   "create_team": "Utwórz Zespół",
   "name": "Nazwa",
   "nameless_team": "Zespół bez nazwy",
+  "oauth_clients": "Klienci OAuth",
+  "oauth_clients_description": "Zarządzaj klientami OAuth dla swojej organizacji",
+  "create_oauth_client": "Utwórz klienta OAuth",
+  "create_oauth_client_description": "Utwórz nowego klienta OAuth do integracji zewnętrznych",
   "oauth_client_deletion_message": "Klient OAuth został pomyślnie usunięty",
   "create_new_team_description": "Utwórz nowy zespół do współpracy z użytkownikami.",
   "create_new_team": "Utwórz nowy zespół",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "Edytuj typ wydarzenia",
   "only_admin_can_see_members_of_org": "Ta organizacja jest prywatna i tylko administrator lub właściciel organizacji może zobaczyć jej członków.",
   "only_admin_can_manage_sso_org": "Tylko administrator lub właściciel organizacji może zarządzać ustawieniami SSO",
+  "only_admin_can_manage_directory_sync": "Tylko administrator lub właściciel organizacji może zarządzać ustawieniami synchronizacji katalogów",
+  "only_admin_can_manage_oauth_clients": "Tylko administrator lub właściciel organizacji może zarządzać klientami OAuth",
   "collective_scheduling": "Zbiorowe ustalanie harmonogramu",
   "make_it_easy_to_book": "Uprość rezerwację zespołu, gdy wszyscy są dostępni.",
   "find_the_best_person": "Znajdź najlepszą dostępną osobę i przejrzyj listę członków swojego zespołu.",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "Błąd podczas tworzenia roli",
   "error_updating_role": "Błąd podczas aktualizowania roli",
   "pbac_desc_create_roles": "Tworzenie ról",
+  "pbac_resource_attributes": "Atrybuty",
+  "pbac_desc_view_organization_attributes": "Wyświetl atrybuty organizacji",
+  "pbac_desc_update_organization_attributes": "Aktualizuj atrybuty organizacji",
+  "pbac_desc_delete_organization_attributes": "Usuń atrybuty organizacji",
+  "pbac_desc_create_organization_attributes": "Utwórz atrybuty organizacji",
   "pbac_desc_view_roles": "Wyświetlanie ról",
   "pbac_desc_update_roles": "Aktualizowanie ról",
   "pbac_desc_delete_roles": "Usuwanie ról",
-  "pbac_desc_manage_roles": "Wszystkie działania na rolach",
+  "pbac_desc_manage_roles": "Wszystkie działania na rolach w zespołach organizacji",
   "pbac_desc_create_event_types": "Tworzenie typów wydarzeń",
   "pbac_desc_view_event_types": "Wyświetlanie typów wydarzeń",
   "pbac_desc_update_event_types": "Aktualizowanie typów wydarzeń",
   "pbac_desc_delete_event_types": "Usuwanie typów wydarzeń",
-  "pbac_desc_manage_event_types": "Wszystkie działania na typach wydarzeń",
+  "pbac_desc_manage_event_types": "Wszystkie działania na typach wydarzeń w zespołach organizacji",
   "pbac_desc_create_teams": "Tworzenie zespołów",
   "pbac_desc_view_team_details": "Wyświetlanie szczegółów zespołu",
   "pbac_desc_update_team_settings": "Aktualizowanie ustawień zespołu",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "Zapraszanie członków zespołu",
   "pbac_desc_remove_team_members": "Usuwanie członków zespołu",
   "pbac_desc_change_team_member_role": "Zmiana roli członków zespołu",
-  "pbac_desc_manage_teams": "Wszystkie działania na zespołach",
+  "pbac_desc_manage_teams": "Wszystkie działania na zespołach w organizacji",
   "pbac_desc_create_organization": "Utwórz organizację",
   "pbac_desc_view_organization_details": "Zobacz szczegóły organizacji",
   "pbac_desc_list_organization_members": "Wyświetl członków organizacji",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "Zobacz rezerwacje organizacji",
   "pbac_desc_view_booking_recordings": "Zobacz nagrania rezerwacji",
   "pbac_desc_update_bookings": "Aktualizuj rezerwacje",
-  "pbac_desc_manage_bookings": "Wszystkie działania na rezerwacjach",
+  "pbac_desc_manage_bookings": "Wszystkie działania na rezerwacjach w zespołach organizacji",
   "pbac_desc_view_team_insights": "Zobacz statystyki zespołu",
   "pbac_desc_manage_team_insights": "Zarządzaj statystykami zespołu",
   "read_permission_auto_enabled_tooltip": "Uprawnienie do odczytu jest automatycznie włączane podczas tworzenia, aktualizowania lub usuwania zasobu",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "Ten link może być użyty do {{count}} rezerwacji",
   "usage_based_generic_expiration_description": "Ten link można skonfigurować tak, aby wygasał po określonej liczbie rezerwacji",
   "usage_based_expiration_description_plural": "Ten link może być użyty do {{count}} rezerwacji",
+  "booking_status": "Status rezerwacji",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Dodaj nowe ciągi powyżej ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
