--- a/apps/web/public/static/locales/pt/common.json
+++ b/apps/web/public/static/locales/pt/common.json
@@ -871,6 +871,10 @@
   "create_team": "Criar Equipa",
   "name": "Nome",
   "nameless_team": "Equipe sem nome",
+  "oauth_clients": "Clientes OAuth",
+  "oauth_clients_description": "Gerencie clientes OAuth para sua organização",
+  "create_oauth_client": "Criar cliente OAuth",
+  "create_oauth_client_description": "Crie um novo cliente OAuth para integrações de terceiros",
   "oauth_client_deletion_message": "Cliente OAuth excluído com sucesso",
   "create_new_team_description": "Crie uma equipa para colaborar com os utilizadores.",
   "create_new_team": "Criar uma Equipa",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "Editar o tipo de evento",
   "only_admin_can_see_members_of_org": "Esta Organização é privada e apenas o administrador ou o proprietário da organização pode ver os respetivos membros.",
   "only_admin_can_manage_sso_org": "Apenas o administrador ou o proprietário da organização pode gerir as definições de SSO",
+  "only_admin_can_manage_directory_sync": "Apenas o administrador ou proprietário da organização pode gerenciar as configurações de sincronização de diretório",
+  "only_admin_can_manage_oauth_clients": "Apenas o administrador ou proprietário da organização pode gerenciar clientes OAuth",
   "collective_scheduling": "Agendamento coletivo",
   "make_it_easy_to_book": "Faça com que seja simples reservar a sua equipa quando todos estiverem disponíveis.",
   "find_the_best_person": "Encontre a melhor pessoa disponível e faça um ciclo pela sua equipa.",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "Erro ao criar função",
   "error_updating_role": "Erro ao atualizar função",
   "pbac_desc_create_roles": "Criar funções",
+  "pbac_resource_attributes": "Atributos",
+  "pbac_desc_view_organization_attributes": "Visualizar atributos da organização",
+  "pbac_desc_update_organization_attributes": "Atualizar atributos da organização",
+  "pbac_desc_delete_organization_attributes": "Excluir atributos da organização",
+  "pbac_desc_create_organization_attributes": "Criar atributos da organização",
   "pbac_desc_view_roles": "Ver funções",
   "pbac_desc_update_roles": "Atualizar funções",
   "pbac_desc_delete_roles": "Eliminar funções",
-  "pbac_desc_manage_roles": "Todas as ações em funções",
+  "pbac_desc_manage_roles": "Todas as ações em funções em todas as equipes da organização",
   "pbac_desc_create_event_types": "Criar tipos de evento",
   "pbac_desc_view_event_types": "Ver tipos de evento",
   "pbac_desc_update_event_types": "Atualizar tipos de evento",
   "pbac_desc_delete_event_types": "Eliminar tipos de evento",
-  "pbac_desc_manage_event_types": "Todas as ações em tipos de evento",
+  "pbac_desc_manage_event_types": "Todas as ações em tipos de eventos em todas as equipes da organização",
   "pbac_desc_create_teams": "Criar equipas",
   "pbac_desc_view_team_details": "Ver detalhes da equipa",
   "pbac_desc_update_team_settings": "Atualizar configurações da equipa",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "Convidar membros para a equipa",
   "pbac_desc_remove_team_members": "Remover membros da equipa",
   "pbac_desc_change_team_member_role": "Alterar função dos membros da equipa",
-  "pbac_desc_manage_teams": "Todas as ações em equipes",
+  "pbac_desc_manage_teams": "Todas as ações em equipes em todas as equipes da organização",
   "pbac_desc_create_organization": "Criar organização",
   "pbac_desc_view_organization_details": "Ver detalhes da organização",
   "pbac_desc_list_organization_members": "Listar membros da organização",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "Ver reservas da organização",
   "pbac_desc_view_booking_recordings": "Ver gravações de reservas",
   "pbac_desc_update_bookings": "Atualizar reservas",
-  "pbac_desc_manage_bookings": "Todas as ações em reservas",
+  "pbac_desc_manage_bookings": "Todas as ações em agendamentos em todas as equipes da organização",
   "pbac_desc_view_team_insights": "Ver insights da equipe",
   "pbac_desc_manage_team_insights": "Gerenciar insights da equipe",
   "read_permission_auto_enabled_tooltip": "A permissão de leitura é ativada automaticamente ao criar, atualizar ou excluir um recurso",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "Este link pode ser usado para {{count}} agendamento",
   "usage_based_generic_expiration_description": "Este link pode ser configurado para expirar após um número definido de agendamentos",
   "usage_based_expiration_description_plural": "Este link pode ser usado para {{count}} agendamentos",
+  "booking_status": "Status do agendamento",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Add your new strings above here ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
