--- a/apps/web/public/static/locales/ru/common.json
+++ b/apps/web/public/static/locales/ru/common.json
@@ -871,6 +871,10 @@
   "create_team": "Создать команду",
   "name": "Имя",
   "nameless_team": "Безымянная команда",
+  "oauth_clients": "OAuth-клиенты",
+  "oauth_clients_description": "Управляйте OAuth-клиентами вашей организации",
+  "create_oauth_client": "Создать OAuth-клиент",
+  "create_oauth_client_description": "Создайте новый OAuth-клиент для интеграции с сторонними сервисами",
   "oauth_client_deletion_message": "OAuth клиент успешно удален",
   "create_new_team_description": "Создайте новую команду для взаимодействия с пользователями.",
   "create_new_team": "Создание новой команды",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "Редактировать тип мероприятия",
   "only_admin_can_see_members_of_org": "Эта организация является частной, и только администратор или владелец организации может просматривать её участников.",
   "only_admin_can_manage_sso_org": "Только администратор или владелец организации может управлять настройками SSO",
+  "only_admin_can_manage_directory_sync": "Только администратор или владелец организации может управлять настройками синхронизации каталогов",
+  "only_admin_can_manage_oauth_clients": "Только администратор или владелец организации может управлять OAuth-клиентами",
   "collective_scheduling": "Совместное планирование",
   "make_it_easy_to_book": "Оформляйте бронирование для команды, когда все пользователи доступны. Теперь это несложно.",
   "find_the_best_person": "Выбирайте наиболее подходящего сотрудника из команды в порядке очередности.",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "Ошибка при создании роли",
   "error_updating_role": "Ошибка при обновлении роли",
   "pbac_desc_create_roles": "Создание ролей",
+  "pbac_resource_attributes": "Атрибуты",
+  "pbac_desc_view_organization_attributes": "Просмотр атрибутов организации",
+  "pbac_desc_update_organization_attributes": "Обновление атрибутов организации",
+  "pbac_desc_delete_organization_attributes": "Удаление атрибутов организации",
+  "pbac_desc_create_organization_attributes": "Создание атрибутов организации",
   "pbac_desc_view_roles": "Просмотр ролей",
   "pbac_desc_update_roles": "Обновление ролей",
   "pbac_desc_delete_roles": "Удаление ролей",
-  "pbac_desc_manage_roles": "Все действия с ролями",
+  "pbac_desc_manage_roles": "Все действия с ролями в командах организации",
   "pbac_desc_create_event_types": "Создание типов событий",
   "pbac_desc_view_event_types": "Просмотр типов событий",
   "pbac_desc_update_event_types": "Обновление типов событий",
   "pbac_desc_delete_event_types": "Удаление типов событий",
-  "pbac_desc_manage_event_types": "Все действия с типами событий",
+  "pbac_desc_manage_event_types": "Все действия с типами событий в командах организации",
   "pbac_desc_create_teams": "Создание команд",
   "pbac_desc_view_team_details": "Просмотр информации о команде",
   "pbac_desc_update_team_settings": "Обновление настроек команды",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "Приглашение участников команды",
   "pbac_desc_remove_team_members": "Удаление участников команды",
   "pbac_desc_change_team_member_role": "Изменение роли участников команды",
-  "pbac_desc_manage_teams": "Все действия с командами",
+  "pbac_desc_manage_teams": "Все действия с командами в организации",
   "pbac_desc_create_organization": "Создать организацию",
   "pbac_desc_view_organization_details": "Просмотр деталей организации",
   "pbac_desc_list_organization_members": "Список участников организации",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "Просмотр бронирований организации",
   "pbac_desc_view_booking_recordings": "Просмотр записей бронирований",
   "pbac_desc_update_bookings": "Обновление бронирований",
-  "pbac_desc_manage_bookings": "Все действия с бронированиями",
+  "pbac_desc_manage_bookings": "Все действия с бронированиями в командах организации",
   "pbac_desc_view_team_insights": "Просмотр аналитики команды",
   "pbac_desc_manage_team_insights": "Управление аналитикой команды",
   "read_permission_auto_enabled_tooltip": "Разрешение на чтение автоматически включается при создании, обновлении или удалении ресурса",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "Эта ссылка может быть использована для {{count}} бронирования",
   "usage_based_generic_expiration_description": "Эта ссылка может быть настроена на истечение после определённого количества бронирований",
   "usage_based_expiration_description_plural": "Эта ссылка может быть использована для {{count}} бронирований",
+  "booking_status": "Статус бронирования",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Добавьте строки выше ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
