--- a/apps/web/public/static/locales/sk-SK/common.json
+++ b/apps/web/public/static/locales/sk-SK/common.json
@@ -871,6 +871,10 @@
   "create_team": "Vytvoriť tím",
   "name": "Meno",
   "nameless_team": "Tím bez mena",
+  "oauth_clients": "OAuth klienti",
+  "oauth_clients_description": "Spravujte OAuth klientov pre vašu organizáciu",
+  "create_oauth_client": "Vytvoriť OAuth klienta",
+  "create_oauth_client_description": "Vytvorte nového OAuth klienta pre integrácie tretích strán",
   "oauth_client_deletion_message": "OAuth klient bol úspešne odstránený",
   "create_new_team_description": "Vytvorte nový tím pre spoluprácu s používateľmi.",
   "create_new_team": "Vytvoriť nový tím",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "Upraviť typ udalosti",
   "only_admin_can_see_members_of_org": "Táto organizácia je súkromná a iba administrátor alebo vlastník organizácie môže vidieť jej členov.",
   "only_admin_can_manage_sso_org": "Iba administrátor alebo vlastník organizácie môže spravovať nastavenia SSO",
+  "only_admin_can_manage_directory_sync": "Iba administrátor alebo vlastník organizácie môže spravovať nastavenia synchronizácie adresára",
+  "only_admin_can_manage_oauth_clients": "Iba administrátor alebo vlastník organizácie môže spravovať OAuth klientov",
   "collective_scheduling": "Kolektívne plánovanie",
   "make_it_easy_to_book": "Uľahčite rezerváciu vášho tímu, keď sú všetci dostupní.",
   "find_the_best_person": "Nájdite najlepšiu dostupnú osobu a cyklujte cez váš tím.",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "Chyba pri vytváraní role",
   "error_updating_role": "Chyba pri aktualizácii role",
   "pbac_desc_create_roles": "Vytvárať role",
+  "pbac_resource_attributes": "Atribúty",
+  "pbac_desc_view_organization_attributes": "Zobraziť atribúty organizácie",
+  "pbac_desc_update_organization_attributes": "Aktualizovať atribúty organizácie",
+  "pbac_desc_delete_organization_attributes": "Odstrániť atribúty organizácie",
+  "pbac_desc_create_organization_attributes": "Vytvoriť atribúty organizácie",
   "pbac_desc_view_roles": "Zobraziť role",
   "pbac_desc_update_roles": "Aktualizovať role",
   "pbac_desc_delete_roles": "Vymazať role",
-  "pbac_desc_manage_roles": "Všetky akcie s rolami",
+  "pbac_desc_manage_roles": "Všetky akcie na rolách naprieč tímami organizácie",
   "pbac_desc_create_event_types": "Vytvárať typy udalostí",
   "pbac_desc_view_event_types": "Zobraziť typy udalostí",
   "pbac_desc_update_event_types": "Aktualizovať typy udalostí",
   "pbac_desc_delete_event_types": "Vymazať typy udalostí",
-  "pbac_desc_manage_event_types": "Všetky akcie s typmi udalostí",
+  "pbac_desc_manage_event_types": "Všetky akcie na typoch udalostí naprieč tímami organizácie",
   "pbac_desc_create_teams": "Vytvárať tímy",
   "pbac_desc_view_team_details": "Zobraziť detaily tímu",
   "pbac_desc_update_team_settings": "Aktualizovať nastavenia tímu",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "Pozývať členov tímu",
   "pbac_desc_remove_team_members": "Odstrániť členov tímu",
   "pbac_desc_change_team_member_role": "Zmeniť rolu členov tímu",
-  "pbac_desc_manage_teams": "Všetky akcie v tímoch",
+  "pbac_desc_manage_teams": "Všetky akcie na tímoch naprieč tímami organizácie",
   "pbac_desc_create_organization": "Vytvoriť organizáciu",
   "pbac_desc_view_organization_details": "Zobraziť detaily organizácie",
   "pbac_desc_list_organization_members": "Zobraziť zoznam členov organizácie",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "Zobraziť rezervácie organizácie",
   "pbac_desc_view_booking_recordings": "Zobraziť nahrávky rezervácií",
   "pbac_desc_update_bookings": "Aktualizovať rezervácie",
-  "pbac_desc_manage_bookings": "Všetky akcie s rezerváciami",
+  "pbac_desc_manage_bookings": "Všetky akcie na rezerváciách naprieč tímami organizácie",
   "pbac_desc_view_team_insights": "Zobraziť prehľady tímu",
   "pbac_desc_manage_team_insights": "Spravovať prehľady tímu",
   "read_permission_auto_enabled_tooltip": "Povolenie na čítanie je automaticky aktivované pri vytváraní, aktualizácii alebo odstraňovaní zdroja",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "Tento odkaz je možné použiť na {{count}} rezerváciu",
   "usage_based_generic_expiration_description": "Tento odkaz je možné nastaviť tak, aby vypršal po stanovenom počte rezervácií",
   "usage_based_expiration_description_plural": "Tento odkaz je možné použiť na {{count}} rezervácie",
+  "booking_status": "Stav rezervácie",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Pridajte svoje nové reťazce nad túto líniu ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
