--- a/apps/web/public/static/locales/sr/common.json
+++ b/apps/web/public/static/locales/sr/common.json
@@ -871,6 +871,10 @@
   "create_team": "Napravi Tim",
   "name": "Ime",
   "nameless_team": "Tim bez imena",
+  "oauth_clients": "OAuth klijenti",
+  "oauth_clients_description": "Upravljajte OAuth klijentima za vašu organizaciju",
+  "create_oauth_client": "Kreiraj OAuth klijenta",
+  "create_oauth_client_description": "Kreirajte novog OAuth klijenta za integracije sa trećim stranama",
   "oauth_client_deletion_message": "OAuth klijent je uspešno obrisan",
   "create_new_team_description": "Napravite novi tim da sarađujete sa korisnicima.",
   "create_new_team": "Napravite novi tim",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "Izmenite tip događaja",
   "only_admin_can_see_members_of_org": "Ova organizacija je privatna i samo administrator ili vlasnik organizacije može videti njene članove.",
   "only_admin_can_manage_sso_org": "Samo administrator ili vlasnik organizacije može upravljati SSO podešavanjima",
+  "only_admin_can_manage_directory_sync": "Samo administrator ili vlasnik organizacije može upravljati podešavanjima sinhronizacije direktorijuma",
+  "only_admin_can_manage_oauth_clients": "Samo administrator ili vlasnik organizacije može upravljati OAuth klijentima",
   "collective_scheduling": "Kolektivno zakazivanje",
   "make_it_easy_to_book": "Olakšajte rezervisanje za vaš tim kada su svi dostupni.",
   "find_the_best_person": "Pronađite najbolju dostupnu osobu i potom rotirajte ostale članove tima.",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "Greška pri kreiranju uloge",
   "error_updating_role": "Greška pri ažuriranju uloge",
   "pbac_desc_create_roles": "Kreiranje uloga",
+  "pbac_resource_attributes": "Atributi",
+  "pbac_desc_view_organization_attributes": "Pregled atributa organizacije",
+  "pbac_desc_update_organization_attributes": "Ažuriranje atributa organizacije",
+  "pbac_desc_delete_organization_attributes": "Brisanje atributa organizacije",
+  "pbac_desc_create_organization_attributes": "Kreiranje atributa organizacije",
   "pbac_desc_view_roles": "Pregled uloga",
   "pbac_desc_update_roles": "Ažuriranje uloga",
   "pbac_desc_delete_roles": "Brisanje uloga",
-  "pbac_desc_manage_roles": "Sve akcije nad ulogama",
+  "pbac_desc_manage_roles": "Sve akcije nad ulogama kroz timove organizacije",
   "pbac_desc_create_event_types": "Kreiranje tipova događaja",
   "pbac_desc_view_event_types": "Pregled tipova događaja",
   "pbac_desc_update_event_types": "Ažuriranje tipova događaja",
   "pbac_desc_delete_event_types": "Brisanje tipova događaja",
-  "pbac_desc_manage_event_types": "Sve akcije nad tipovima događaja",
+  "pbac_desc_manage_event_types": "Sve akcije nad tipovima događaja kroz timove organizacije",
   "pbac_desc_create_teams": "Kreiranje timova",
   "pbac_desc_view_team_details": "Pregled detalja tima",
   "pbac_desc_update_team_settings": "Ažuriranje podešavanja tima",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "Pozivanje članova tima",
   "pbac_desc_remove_team_members": "Uklanjanje članova tima",
   "pbac_desc_change_team_member_role": "Promena uloge članova tima",
-  "pbac_desc_manage_teams": "Sve akcije na timovima",
+  "pbac_desc_manage_teams": "Sve akcije nad timovima kroz timove organizacije",
   "pbac_desc_create_organization": "Kreiranje organizacije",
   "pbac_desc_view_organization_details": "Pregled detalja organizacije",
   "pbac_desc_list_organization_members": "Lista članova organizacije",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "Pregled rezervacija organizacije",
   "pbac_desc_view_booking_recordings": "Pregled snimaka rezervacija",
   "pbac_desc_update_bookings": "Ažuriranje rezervacija",
-  "pbac_desc_manage_bookings": "Sve akcije na rezervacijama",
+  "pbac_desc_manage_bookings": "Sve akcije nad rezervacijama kroz timove organizacije",
   "pbac_desc_view_team_insights": "Pregled uvida o timu",
   "pbac_desc_manage_team_insights": "Upravljanje uvidima o timu",
   "read_permission_auto_enabled_tooltip": "Dozvola za čitanje se automatski omogućava prilikom kreiranja, ažuriranja ili brisanja resursa",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "Ovaj link se može koristiti za {{count}} zakazivanje",
   "usage_based_generic_expiration_description": "Ovaj link se može podesiti da istekne nakon određenog broja zakazivanja",
   "usage_based_expiration_description_plural": "Ovaj link se može koristiti za {{count}} zakazivanja",
+  "booking_status": "Status rezervacije",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Dodajte svoje nove stringove iznad ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
