--- a/apps/web/public/static/locales/sv/common.json
+++ b/apps/web/public/static/locales/sv/common.json
@@ -871,6 +871,10 @@
   "create_team": "Skapa team",
   "name": "Namn",
   "nameless_team": "Namnlöst team",
+  "oauth_clients": "OAuth-klienter",
+  "oauth_clients_description": "Hantera OAuth-klienter för din organisation",
+  "create_oauth_client": "Skapa OAuth-klient",
+  "create_oauth_client_description": "Skapa en ny OAuth-klient för tredjepartsintegrationer",
   "oauth_client_deletion_message": "OAuth-klienten har tagits bort",
   "create_new_team_description": "Skapa ett nytt team för att samarbeta med användare.",
   "create_new_team": "Skapa ett nytt team",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "Redigera händelsetyp",
   "only_admin_can_see_members_of_org": "Denna organisation är privat, och endast organisationens administratör eller ägare kan se dess medlemmar.",
   "only_admin_can_manage_sso_org": "Endast organisationens administratör eller ägare kan hantera SSO-inställningar",
+  "only_admin_can_manage_directory_sync": "Endast organisationens administratör eller ägare kan hantera inställningar för katalogsynkronisering",
+  "only_admin_can_manage_oauth_clients": "Endast organisationens administratör eller ägare kan hantera OAuth-klienter",
   "collective_scheduling": "Kollektiv schemaläggning",
   "make_it_easy_to_book": "Gör det enkelt att boka ditt team när alla är tillgängliga.",
   "find_the_best_person": "Hitta den bästa personen som finns tillgänglig och gå igenom ditt team.",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "Fel vid skapande av roll",
   "error_updating_role": "Fel vid uppdatering av roll",
   "pbac_desc_create_roles": "Skapa roller",
+  "pbac_resource_attributes": "Egenskaper",
+  "pbac_desc_view_organization_attributes": "Visa organisationens egenskaper",
+  "pbac_desc_update_organization_attributes": "Uppdatera organisationens egenskaper",
+  "pbac_desc_delete_organization_attributes": "Ta bort organisationens egenskaper",
+  "pbac_desc_create_organization_attributes": "Skapa organisationens egenskaper",
   "pbac_desc_view_roles": "Visa roller",
   "pbac_desc_update_roles": "Uppdatera roller",
   "pbac_desc_delete_roles": "Radera roller",
-  "pbac_desc_manage_roles": "Alla åtgärder för roller",
+  "pbac_desc_manage_roles": "Alla åtgärder på roller inom organisationens team",
   "pbac_desc_create_event_types": "Skapa händelsetyper",
   "pbac_desc_view_event_types": "Visa händelsetyper",
   "pbac_desc_update_event_types": "Uppdatera händelsetyper",
   "pbac_desc_delete_event_types": "Radera händelsetyper",
-  "pbac_desc_manage_event_types": "Alla åtgärder för händelsetyper",
+  "pbac_desc_manage_event_types": "Alla åtgärder på händelsetyper inom organisationens team",
   "pbac_desc_create_teams": "Skapa team",
   "pbac_desc_view_team_details": "Visa teamdetaljer",
   "pbac_desc_update_team_settings": "Uppdatera teaminställningar",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "Bjud in teammedlemmar",
   "pbac_desc_remove_team_members": "Ta bort teammedlemmar",
   "pbac_desc_change_team_member_role": "Ändra roll för teammedlemmar",
-  "pbac_desc_manage_teams": "Alla åtgärder för team",
+  "pbac_desc_manage_teams": "Alla åtgärder på team inom organisationen",
   "pbac_desc_create_organization": "Skapa organisation",
   "pbac_desc_view_organization_details": "Visa organisationsdetaljer",
   "pbac_desc_list_organization_members": "Lista organisationsmedlemmar",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "Visa organisationsbokningar",
   "pbac_desc_view_booking_recordings": "Visa bokningsinspelningar",
   "pbac_desc_update_bookings": "Uppdatera bokningar",
-  "pbac_desc_manage_bookings": "Alla åtgärder för bokningar",
+  "pbac_desc_manage_bookings": "Alla åtgärder på bokningar inom organisationens team",
   "pbac_desc_view_team_insights": "Visa teaminsikter",
   "pbac_desc_manage_team_insights": "Hantera teaminsikter",
   "read_permission_auto_enabled_tooltip": "Läsbehörighet aktiveras automatiskt när en resurs skapas, uppdateras eller tas bort",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "Den här länken kan användas för {{count}} bokning",
   "usage_based_generic_expiration_description": "Den här länken kan konfigureras att förfalla efter ett visst antal bokningar",
   "usage_based_expiration_description_plural": "Den här länken kan användas för {{count}} bokningar",
+  "booking_status": "Bokningsstatus",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Add your new strings above here ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
