--- a/apps/web/public/static/locales/tr/common.json
+++ b/apps/web/public/static/locales/tr/common.json
@@ -871,6 +871,10 @@
   "create_team": "Ekip Oluştur",
   "name": "Ad",
   "nameless_team": "İsimsiz Takım",
+  "oauth_clients": "OAuth İstemcileri",
+  "oauth_clients_description": "Organizasyonunuz için OAuth istemcilerini yönetin",
+  "create_oauth_client": "OAuth İstemcisi Oluştur",
+  "create_oauth_client_description": "Üçüncü taraf entegrasyonları için yeni bir OAuth istemcisi oluşturun",
   "oauth_client_deletion_message": "OAuth istemcisi başarıyla silindi",
   "create_new_team_description": "Kullanıcılarla iş birliği yapmak için yeni bir ekip oluşturun.",
   "create_new_team": "Yeni ekip oluştur",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "Etkinlik türünü düzenle",
   "only_admin_can_see_members_of_org": "Bu organizasyon özeldir ve sadece organizasyonun yöneticisi veya sahibi üyelerini görebilir.",
   "only_admin_can_manage_sso_org": "Yalnızca organizasyonun yöneticisi veya sahibi SSO ayarlarını yönetebilir",
+  "only_admin_can_manage_directory_sync": "Dizin senkronizasyon ayarlarını yalnızca organizasyonun yöneticisi veya sahibi yönetebilir",
+  "only_admin_can_manage_oauth_clients": "OAuth istemcilerini yalnızca organizasyonun yöneticisi veya sahibi yönetebilir",
   "collective_scheduling": "Toplu Planlama",
   "make_it_easy_to_book": "Herkes müsait olduğunda ekibinizi rezerve etmeyi kolaylaştırın.",
   "find_the_best_person": "Mevcut en iyi kişiyi bulun ve ekip üyeleriniz arasında rotasyon yapın.",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "Rol oluşturulurken hata oluştu",
   "error_updating_role": "Rol güncellenirken hata oluştu",
   "pbac_desc_create_roles": "Rol oluştur",
+  "pbac_resource_attributes": "Öznitelikler",
+  "pbac_desc_view_organization_attributes": "Organizasyon özniteliklerini görüntüle",
+  "pbac_desc_update_organization_attributes": "Organizasyon özniteliklerini güncelle",
+  "pbac_desc_delete_organization_attributes": "Organizasyon özniteliklerini sil",
+  "pbac_desc_create_organization_attributes": "Organizasyon öznitelikleri oluştur",
   "pbac_desc_view_roles": "Rolleri görüntüle",
   "pbac_desc_update_roles": "Rolleri güncelle",
   "pbac_desc_delete_roles": "Rolleri sil",
-  "pbac_desc_manage_roles": "Roller üzerindeki tüm işlemler",
+  "pbac_desc_manage_roles": "Organizasyon ekipleri genelinde roller üzerinde tüm işlemler",
   "pbac_desc_create_event_types": "Etkinlik türleri oluştur",
   "pbac_desc_view_event_types": "Etkinlik türlerini görüntüle",
   "pbac_desc_update_event_types": "Etkinlik türlerini güncelle",
   "pbac_desc_delete_event_types": "Etkinlik türlerini sil",
-  "pbac_desc_manage_event_types": "Etkinlik türleri üzerindeki tüm işlemler",
+  "pbac_desc_manage_event_types": "Organizasyon ekipleri genelinde etkinlik türleri üzerinde tüm işlemler",
   "pbac_desc_create_teams": "Ekip oluştur",
   "pbac_desc_view_team_details": "Ekip detaylarını görüntüle",
   "pbac_desc_update_team_settings": "Ekip ayarlarını güncelle",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "Ekip üyelerini davet et",
   "pbac_desc_remove_team_members": "Ekip üyelerini çıkar",
   "pbac_desc_change_team_member_role": "Ekip üyelerinin rolünü değiştir",
-  "pbac_desc_manage_teams": "Ekipler üzerindeki tüm işlemler",
+  "pbac_desc_manage_teams": "Organizasyon ekipleri genelinde ekipler üzerinde tüm işlemler",
   "pbac_desc_create_organization": "Organizasyon oluştur",
   "pbac_desc_view_organization_details": "Organizasyon detaylarını görüntüle",
   "pbac_desc_list_organization_members": "Organizasyon üyelerini listele",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "Organizasyon rezervasyonlarını görüntüle",
   "pbac_desc_view_booking_recordings": "Rezervasyon kayıtlarını görüntüle",
   "pbac_desc_update_bookings": "Rezervasyonları güncelle",
-  "pbac_desc_manage_bookings": "Rezervasyonlar üzerindeki tüm işlemler",
+  "pbac_desc_manage_bookings": "Organizasyon ekipleri genelinde rezervasyonlar üzerinde tüm işlemler",
   "pbac_desc_view_team_insights": "Takım istatistiklerini görüntüle",
   "pbac_desc_manage_team_insights": "Takım istatistiklerini yönet",
   "read_permission_auto_enabled_tooltip": "Bir kaynağı oluştururken, güncellerken veya silerken okuma izni otomatik olarak etkinleştirilir",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "Bu bağlantı {{count}} rezervasyon için kullanılabilir",
   "usage_based_generic_expiration_description": "Bu bağlantı belirli sayıda rezervasyondan sonra sona erecek şekilde yapılandırılabilir",
   "usage_based_expiration_description_plural": "Bu bağlantı {{count}} rezervasyon için kullanılabilir",
+  "booking_status": "Rezervasyon durumu",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Yeni dizelerinizi yukarıya ekleyin ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
