--- a/apps/web/public/static/locales/uk/common.json
+++ b/apps/web/public/static/locales/uk/common.json
@@ -871,6 +871,10 @@
   "create_team": "Створити команду",
   "name": "Назва",
   "nameless_team": "Команда без назви",
+  "oauth_clients": "OAuth клієнти",
+  "oauth_clients_description": "Керуйте OAuth клієнтами для вашої організації",
+  "create_oauth_client": "Створити OAuth клієнта",
+  "create_oauth_client_description": "Створіть нового OAuth клієнта для інтеграцій з третіми сторонами",
   "oauth_client_deletion_message": "OAuth клієнт успішно видалено",
   "create_new_team_description": "Створення нової команди для співпраці з користувачами.",
   "create_new_team": "Створити нову команду",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "Редагувати тип заходу",
   "only_admin_can_see_members_of_org": "Ця організація є приватною, і лише адміністратор або власник організації може переглядати її членів.",
   "only_admin_can_manage_sso_org": "Лише адміністратор або власник організації може керувати налаштуваннями SSO",
+  "only_admin_can_manage_directory_sync": "Тільки адміністратор або власник організації може керувати налаштуваннями синхронізації каталогу",
+  "only_admin_can_manage_oauth_clients": "Тільки адміністратор або власник організації може керувати OAuth клієнтами",
   "collective_scheduling": "Колективне планування",
   "make_it_easy_to_book": "Спростіть бронювання у випадках, коли всі члени вашої команди доступні.",
   "find_the_best_person": "Знайдіть найвідповіднішого доступного члена команди та почергово залучайте інших.",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "Помилка створення ролі",
   "error_updating_role": "Помилка оновлення ролі",
   "pbac_desc_create_roles": "Створення ролей",
+  "pbac_resource_attributes": "Атрибути",
+  "pbac_desc_view_organization_attributes": "Перегляд атрибутів організації",
+  "pbac_desc_update_organization_attributes": "Оновлення атрибутів організації",
+  "pbac_desc_delete_organization_attributes": "Видалення атрибутів організації",
+  "pbac_desc_create_organization_attributes": "Створення атрибутів організації",
   "pbac_desc_view_roles": "Перегляд ролей",
   "pbac_desc_update_roles": "Оновлення ролей",
   "pbac_desc_delete_roles": "Видалення ролей",
-  "pbac_desc_manage_roles": "Усі дії з ролями",
+  "pbac_desc_manage_roles": "Усі дії з ролями в командах організації",
   "pbac_desc_create_event_types": "Створення типів заходів",
   "pbac_desc_view_event_types": "Перегляд типів заходів",
   "pbac_desc_update_event_types": "Оновлення типів заходів",
   "pbac_desc_delete_event_types": "Видалення типів заходів",
-  "pbac_desc_manage_event_types": "Усі дії з типами заходів",
+  "pbac_desc_manage_event_types": "Усі дії з типами подій у командах організації",
   "pbac_desc_create_teams": "Створення команд",
   "pbac_desc_view_team_details": "Перегляд деталей команди",
   "pbac_desc_update_team_settings": "Оновлення налаштувань команди",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "Запрошення учасників команди",
   "pbac_desc_remove_team_members": "Видалення учасників команди",
   "pbac_desc_change_team_member_role": "Зміна ролі учасників команди",
-  "pbac_desc_manage_teams": "Усі дії з командами",
+  "pbac_desc_manage_teams": "Усі дії з командами в організації",
   "pbac_desc_create_organization": "Створення організації",
   "pbac_desc_view_organization_details": "Перегляд деталей організації",
   "pbac_desc_list_organization_members": "Список учасників організації",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "Перегляд бронювань організації",
   "pbac_desc_view_booking_recordings": "Перегляд записів бронювань",
   "pbac_desc_update_bookings": "Оновлення бронювань",
-  "pbac_desc_manage_bookings": "Усі дії з бронюваннями",
+  "pbac_desc_manage_bookings": "Усі дії з бронюваннями в командах організації",
   "pbac_desc_view_team_insights": "Перегляд аналітики команди",
   "pbac_desc_manage_team_insights": "Керування аналітикою команди",
   "read_permission_auto_enabled_tooltip": "Дозвіл на читання автоматично вмикається при створенні, оновленні або видаленні ресурсу",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "Це посилання можна використати для {{count}} бронювання",
   "usage_based_generic_expiration_description": "Для цього посилання можна налаштувати закінчення терміну дії після встановленої кількості бронювань",
   "usage_based_expiration_description_plural": "Це посилання можна використати для {{count}} бронювань",
+  "booking_status": "Статус бронювання",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Add your new strings above here ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
