--- a/apps/web/public/static/locales/vi/common.json
+++ b/apps/web/public/static/locales/vi/common.json
@@ -871,6 +871,10 @@
   "create_team": "Tạo nhóm",
   "name": "Tên",
   "nameless_team": "Nhóm chưa đặt tên",
+  "oauth_clients": "Ứng dụng OAuth",
+  "oauth_clients_description": "Quản lý ứng dụng OAuth cho tổ chức của bạn",
+  "create_oauth_client": "Tạo ứng dụng OAuth",
+  "create_oauth_client_description": "Tạo ứng dụng OAuth mới cho tích hợp với bên thứ ba",
   "oauth_client_deletion_message": "Đã xóa thành công OAuth client",
   "create_new_team_description": "Tạo một nhóm mới để hợp tác với người khác.",
   "create_new_team": "Tạo một nhóm mới",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "Sửa loại sự kiện",
   "only_admin_can_see_members_of_org": "Tổ chức này là riêng tư, chỉ có quản trị viên hoặc chủ sở hữu của tổ chức mới có thể xem các thành viên.",
   "only_admin_can_manage_sso_org": "Chỉ có quản trị viên hoặc chủ sở hữu của tổ chức mới có thể quản lý cài đặt SSO",
+  "only_admin_can_manage_directory_sync": "Chỉ quản trị viên hoặc chủ sở hữu của tổ chức mới có thể quản lý cài đặt đồng bộ hóa thư mục",
+  "only_admin_can_manage_oauth_clients": "Chỉ quản trị viên hoặc chủ sở hữu của tổ chức mới có thể quản lý ứng dụng OAuth",
   "collective_scheduling": "Lên lịch tập thể",
   "make_it_easy_to_book": "Tạo điều kiện dễ dàng đặt lịch cho nhóm của bạn khi mọi người đều rảnh.",
   "find_the_best_person": "Tìm người tốt nhất có được và xoay vòng trong nhóm bạn.",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "Lỗi khi tạo vai trò",
   "error_updating_role": "Lỗi khi cập nhật vai trò",
   "pbac_desc_create_roles": "Tạo vai trò",
+  "pbac_resource_attributes": "Thuộc tính",
+  "pbac_desc_view_organization_attributes": "Xem thuộc tính tổ chức",
+  "pbac_desc_update_organization_attributes": "Cập nhật thuộc tính tổ chức",
+  "pbac_desc_delete_organization_attributes": "Xóa thuộc tính tổ chức",
+  "pbac_desc_create_organization_attributes": "Tạo thuộc tính tổ chức",
   "pbac_desc_view_roles": "Xem vai trò",
   "pbac_desc_update_roles": "Cập nhật vai trò",
   "pbac_desc_delete_roles": "Xóa vai trò",
-  "pbac_desc_manage_roles": "Tất cả hành động trên vai trò",
+  "pbac_desc_manage_roles": "Tất cả hành động trên vai trò trong các nhóm tổ chức",
   "pbac_desc_create_event_types": "Tạo loại sự kiện",
   "pbac_desc_view_event_types": "Xem loại sự kiện",
   "pbac_desc_update_event_types": "Cập nhật loại sự kiện",
   "pbac_desc_delete_event_types": "Xóa loại sự kiện",
-  "pbac_desc_manage_event_types": "Tất cả hành động trên loại sự kiện",
+  "pbac_desc_manage_event_types": "Tất cả hành động trên loại sự kiện trong các nhóm tổ chức",
   "pbac_desc_create_teams": "Tạo nhóm",
   "pbac_desc_view_team_details": "Xem chi tiết nhóm",
   "pbac_desc_update_team_settings": "Cập nhật cài đặt nhóm",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "Mời thành viên nhóm",
   "pbac_desc_remove_team_members": "Xóa thành viên nhóm",
   "pbac_desc_change_team_member_role": "Thay đổi vai trò của thành viên nhóm",
-  "pbac_desc_manage_teams": "Tất cả các hành động trên nhóm",
+  "pbac_desc_manage_teams": "Tất cả hành động trên nhóm trong các nhóm tổ chức",
   "pbac_desc_create_organization": "Tạo tổ chức",
   "pbac_desc_view_organization_details": "Xem chi tiết tổ chức",
   "pbac_desc_list_organization_members": "Liệt kê thành viên tổ chức",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "Xem đặt chỗ của tổ chức",
   "pbac_desc_view_booking_recordings": "Xem bản ghi đặt chỗ",
   "pbac_desc_update_bookings": "Cập nhật đặt chỗ",
-  "pbac_desc_manage_bookings": "Tất cả các hành động trên đặt chỗ",
+  "pbac_desc_manage_bookings": "Tất cả hành động trên đặt lịch trong các nhóm tổ chức",
   "pbac_desc_view_team_insights": "Xem thông tin chi tiết của nhóm",
   "pbac_desc_manage_team_insights": "Quản lý thông tin chi tiết của nhóm",
   "read_permission_auto_enabled_tooltip": "Quyền đọc được tự động kích hoạt khi tạo, cập nhật hoặc xóa tài nguyên",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "Liên kết này có thể được sử dụng cho {{count}} lần đặt lịch",
   "usage_based_generic_expiration_description": "Liên kết này có thể được cấu hình để hết hiệu lực sau một số lần đặt lịch nhất định",
   "usage_based_expiration_description_plural": "Liên kết này có thể được sử dụng cho {{count}} lần đặt lịch",
+  "booking_status": "Trạng thái đặt lịch",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Add your new strings above here ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
