--- a/apps/web/public/static/locales/zh-CN/common.json
+++ b/apps/web/public/static/locales/zh-CN/common.json
@@ -871,6 +871,10 @@
   "create_team": "新建团队",
   "name": "名称",
   "nameless_team": "未命名团队",
+  "oauth_clients": "OAuth 客户端",
+  "oauth_clients_description": "管理您组织的 OAuth 客户端",
+  "create_oauth_client": "创建 OAuth 客户端",
+  "create_oauth_client_description": "为第三方集成创建一个新的 OAuth 客户端",
   "oauth_client_deletion_message": "OAuth客户端已成功删除",
   "create_new_team_description": "创建一个新团队来与他人合作。",
   "create_new_team": "创建一个新团队",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "编辑活动类型",
   "only_admin_can_see_members_of_org": "该组织是私有的，只有该组织的管理员或所有者才能查看其成员。",
   "only_admin_can_manage_sso_org": "只有组织的管理员或所有者才能管理 SSO 设置",
+  "only_admin_can_manage_directory_sync": "只有组织的管理员或所有者可以管理目录同步设置",
+  "only_admin_can_manage_oauth_clients": "只有组织的管理员或所有者可以管理 OAuth 客户端",
   "collective_scheduling": "集体日程安排",
   "make_it_easy_to_book": "轻松预约所有团队成员有空的时间。",
   "find_the_best_person": "寻找最合适的人选，并在团队内轮流。",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "创建角色时出错",
   "error_updating_role": "更新角色时出错",
   "pbac_desc_create_roles": "创建角色",
+  "pbac_resource_attributes": "属性",
+  "pbac_desc_view_organization_attributes": "查看组织属性",
+  "pbac_desc_update_organization_attributes": "更新组织属性",
+  "pbac_desc_delete_organization_attributes": "删除组织属性",
+  "pbac_desc_create_organization_attributes": "创建组织属性",
   "pbac_desc_view_roles": "查看角色",
   "pbac_desc_update_roles": "更新角色",
   "pbac_desc_delete_roles": "删除角色",
-  "pbac_desc_manage_roles": "对角色的所有操作",
+  "pbac_desc_manage_roles": "管理组织团队中角色的所有操作",
   "pbac_desc_create_event_types": "创建活动类型",
   "pbac_desc_view_event_types": "查看活动类型",
   "pbac_desc_update_event_types": "更新活动类型",
   "pbac_desc_delete_event_types": "删除活动类型",
-  "pbac_desc_manage_event_types": "对活动类型的所有操作",
+  "pbac_desc_manage_event_types": "管理组织团队中事件类型的所有操作",
   "pbac_desc_create_teams": "创建团队",
   "pbac_desc_view_team_details": "查看团队详情",
   "pbac_desc_update_team_settings": "更新团队设置",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "邀请团队成员",
   "pbac_desc_remove_team_members": "移除团队成员",
   "pbac_desc_change_team_member_role": "更改团队成员角色",
-  "pbac_desc_manage_teams": "对团队的所有操作",
+  "pbac_desc_manage_teams": "管理组织团队中团队的所有操作",
   "pbac_desc_create_organization": "创建组织",
   "pbac_desc_view_organization_details": "查看组织详情",
   "pbac_desc_list_organization_members": "列出组织成员",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "查看组织预订",
   "pbac_desc_view_booking_recordings": "查看预订录音",
   "pbac_desc_update_bookings": "更新预订",
-  "pbac_desc_manage_bookings": "对预订的所有操作",
+  "pbac_desc_manage_bookings": "管理组织团队中预订的所有操作",
   "pbac_desc_view_team_insights": "查看团队洞察",
   "pbac_desc_manage_team_insights": "管理团队洞察",
   "read_permission_auto_enabled_tooltip": "在创建、更新或删除资源时，读取权限会自动启用",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "此链接可用于 {{count}} 次预订",
   "usage_based_generic_expiration_description": "此链接可设置为在达到指定预订次数后过期",
   "usage_based_expiration_description_plural": "此链接可用于 {{count}} 次预订",
+  "booking_status": "预订状态",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ 在此上方添加您的新字符串 ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
