--- a/apps/web/public/static/locales/zh-TW/common.json
+++ b/apps/web/public/static/locales/zh-TW/common.json
@@ -871,6 +871,10 @@
   "create_team": "新增團隊",
   "name": "名稱",
   "nameless_team": "未命名團隊",
+  "oauth_clients": "OAuth 用戶端",
+  "oauth_clients_description": "管理貴組織的 OAuth 用戶端",
+  "create_oauth_client": "建立 OAuth 用戶端",
+  "create_oauth_client_description": "為第三方整合建立新的 OAuth 用戶端",
   "oauth_client_deletion_message": "OAuth 客戶端已成功刪除",
   "create_new_team_description": "新增團隊來跟使用者合作。",
   "create_new_team": "新增團隊",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "編輯活動類型",
   "only_admin_can_see_members_of_org": "此組織是私密的，只有組織的管理員或擁有者可以查看其成員。",
   "only_admin_can_manage_sso_org": "只有組織的管理員或擁有者可以管理 SSO 設定",
+  "only_admin_can_manage_directory_sync": "只有組織的管理員或擁有者可以管理目錄同步設定",
+  "only_admin_can_manage_oauth_clients": "只有組織的管理員或擁有者可以管理 OAuth 用戶端",
   "collective_scheduling": "全體預定",
   "make_it_easy_to_book": "輕鬆預約所有團隊成員有空的時間。",
   "find_the_best_person": "尋找可預約的最佳人選，並由團隊成員輪流擔任。",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "建立角色時出錯",
   "error_updating_role": "更新角色時出錯",
   "pbac_desc_create_roles": "建立角色",
+  "pbac_resource_attributes": "屬性",
+  "pbac_desc_view_organization_attributes": "檢視組織屬性",
+  "pbac_desc_update_organization_attributes": "更新組織屬性",
+  "pbac_desc_delete_organization_attributes": "刪除組織屬性",
+  "pbac_desc_create_organization_attributes": "建立組織屬性",
   "pbac_desc_view_roles": "檢視角色",
   "pbac_desc_update_roles": "更新角色",
   "pbac_desc_delete_roles": "刪除角色",
-  "pbac_desc_manage_roles": "角色的所有操作",
+  "pbac_desc_manage_roles": "管理組織團隊中角色的所有操作",
   "pbac_desc_create_event_types": "建立活動類型",
   "pbac_desc_view_event_types": "檢視活動類型",
   "pbac_desc_update_event_types": "更新活動類型",
   "pbac_desc_delete_event_types": "刪除活動類型",
-  "pbac_desc_manage_event_types": "活動類型的所有操作",
+  "pbac_desc_manage_event_types": "管理組織團隊中事件類型的所有操作",
   "pbac_desc_create_teams": "建立團隊",
   "pbac_desc_view_team_details": "檢視團隊詳情",
   "pbac_desc_update_team_settings": "更新團隊設定",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "邀請團隊成員",
   "pbac_desc_remove_team_members": "移除團隊成員",
   "pbac_desc_change_team_member_role": "更改團隊成員角色",
-  "pbac_desc_manage_teams": "對團隊的所有操作",
+  "pbac_desc_manage_teams": "管理組織團隊中團隊的所有操作",
   "pbac_desc_create_organization": "建立組織",
   "pbac_desc_view_organization_details": "查看組織詳情",
   "pbac_desc_list_organization_members": "列出組織成員",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "查看組織預訂",
   "pbac_desc_view_booking_recordings": "查看預訂錄音",
   "pbac_desc_update_bookings": "更新預訂",
-  "pbac_desc_manage_bookings": "對預訂的所有操作",
+  "pbac_desc_manage_bookings": "管理組織團隊中預約的所有操作",
   "pbac_desc_view_team_insights": "查看團隊洞察",
   "pbac_desc_manage_team_insights": "管理團隊洞察",
   "read_permission_auto_enabled_tooltip": "在建立、更新或刪除資源時，閱讀權限會自動啟用",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "此連結可用於 {{count}} 次預訂",
   "usage_based_generic_expiration_description": "此連結可設定為在達到指定預訂次數後過期",
   "usage_based_expiration_description_plural": "此連結可用於 {{count}} 次預訂",
+  "booking_status": "預約狀態",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ 請在此處新增您的字串 ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
