--- a/apps/web/public/static/locales/ro/common.json
+++ b/apps/web/public/static/locales/ro/common.json
@@ -871,6 +871,10 @@
   "create_team": "Creează o echipă",
   "name": "Nume",
   "nameless_team": "Echipă fără nume",
+  "oauth_clients": "Clienți OAuth",
+  "oauth_clients_description": "Gestionează clienții OAuth pentru organizația ta",
+  "create_oauth_client": "Creează client OAuth",
+  "create_oauth_client_description": "Creează un nou client OAuth pentru integrări terțe",
   "oauth_client_deletion_message": "Clientul OAuth a fost șters cu succes",
   "create_new_team_description": "Creează o nouă echipă pentru a colabora cu utilizatorii.",
   "create_new_team": "Creează o echipă nouă",
@@ -1836,6 +1840,8 @@
   "edit_event_type": "Editează tipul de eveniment",
   "only_admin_can_see_members_of_org": "Această organizație este privată și doar administratorul sau proprietarul organizației poate vedea membrii săi.",
   "only_admin_can_manage_sso_org": "Doar administratorul sau proprietarul organizației poate gestiona setările SSO",
+  "only_admin_can_manage_directory_sync": "Doar administratorul sau proprietarul organizației poate gestiona setările de sincronizare a directorului",
+  "only_admin_can_manage_oauth_clients": "Doar administratorul sau proprietarul organizației poate gestiona clienții OAuth",
   "collective_scheduling": "Programare colectivă",
   "make_it_easy_to_book": "Facilitează rezervarea echipei tale când toată lumea este disponibilă.",
   "find_the_best_person": "Găsește cea mai bună persoană disponibilă și treci succesiv prin membrii echipei tale.",
@@ -3302,15 +3308,20 @@
   "error_creating_role": "Eroare la crearea rolului",
   "error_updating_role": "Eroare la actualizarea rolului",
   "pbac_desc_create_roles": "Creați roluri",
+  "pbac_resource_attributes": "Atribute",
+  "pbac_desc_view_organization_attributes": "Vizualizează atributele organizației",
+  "pbac_desc_update_organization_attributes": "Actualizează atributele organizației",
+  "pbac_desc_delete_organization_attributes": "Șterge atributele organizației",
+  "pbac_desc_create_organization_attributes": "Creează atributele organizației",
   "pbac_desc_view_roles": "Vizualizați roluri",
   "pbac_desc_update_roles": "Actualizați roluri",
   "pbac_desc_delete_roles": "Ștergeți roluri",
-  "pbac_desc_manage_roles": "Toate acțiunile asupra rolurilor",
+  "pbac_desc_manage_roles": "Toate acțiunile asupra rolurilor din echipele organizației",
   "pbac_desc_create_event_types": "Creați tipuri de evenimente",
   "pbac_desc_view_event_types": "Vizualizați tipuri de evenimente",
   "pbac_desc_update_event_types": "Actualizați tipuri de evenimente",
   "pbac_desc_delete_event_types": "Ștergeți tipuri de evenimente",
-  "pbac_desc_manage_event_types": "Toate acțiunile asupra tipurilor de evenimente",
+  "pbac_desc_manage_event_types": "Toate acțiunile asupra tipurilor de evenimente din echipele organizației",
   "pbac_desc_create_teams": "Creați echipe",
   "pbac_desc_view_team_details": "Vizualizați detaliile echipei",
   "pbac_desc_update_team_settings": "Actualizați setările echipei",
@@ -3318,7 +3329,7 @@
   "pbac_desc_invite_team_members": "Invitați membri ai echipei",
   "pbac_desc_remove_team_members": "Eliminați membri ai echipei",
   "pbac_desc_change_team_member_role": "Schimbați rolul membrilor echipei",
-  "pbac_desc_manage_teams": "Toate acțiunile asupra echipelor",
+  "pbac_desc_manage_teams": "Toate acțiunile asupra echipelor din organizație",
   "pbac_desc_create_organization": "Creează organizație",
   "pbac_desc_view_organization_details": "Vizualizează detaliile organizației",
   "pbac_desc_list_organization_members": "Listează membrii organizației",
@@ -3333,7 +3344,7 @@
   "pbac_desc_view_organization_bookings": "Vizualizează rezervările organizației",
   "pbac_desc_view_booking_recordings": "Vizualizează înregistrările rezervărilor",
   "pbac_desc_update_bookings": "Actualizează rezervările",
-  "pbac_desc_manage_bookings": "Toate acțiunile asupra rezervărilor",
+  "pbac_desc_manage_bookings": "Toate acțiunile asupra rezervărilor din echipele organizației",
   "pbac_desc_view_team_insights": "Vizualizează perspectivele echipei",
   "pbac_desc_manage_team_insights": "Gestionează perspectivele echipei",
   "read_permission_auto_enabled_tooltip": "Permisiunea de citire este activată automat atunci când se creează, actualizează sau șterge o resursă",
@@ -3418,5 +3429,6 @@
   "usage_based_expiration_description": "Acest link poate fi utilizat pentru {{count}} rezervare",
   "usage_based_generic_expiration_description": "Acest link poate fi configurat să expire după un număr stabilit de rezervări",
   "usage_based_expiration_description_plural": "Acest link poate fi utilizat pentru {{count}} rezervări",
+  "booking_status": "Statusul rezervării",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Adăugați stringurile noi deasupra acestui rând ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
